Reverted edits by [[Special:Contributions/~riIey IS BURNED BY NATZIS CUZ TEGL KILLD MARCOAVRELIO N RUSLIK0 CUZ FVREDAI WANDOLS!|~riIey IS BURNED BY NATZIS CUZ TEGL KILLD MARCOAVRELIO N RUSLIK0 CUZ FVREDAI WANDOLS!]] ([[User talk:~riIey IS BURNED BY NATZIS CUZ TEGL KILLD MARCOAVRELIO N RUSLIK0 CUZ FVREDAI WANDOLS!|talk]]) to last revision by [[User:CommonsDelinker|CommonsDelinker]]

--- a/་ན་གྱི-་དྲྭ་ཚ་ཤི.mw
+++ b/་ན་གྱི-་དྲྭ་ཚ་ཤི.mw
@@ -1,1 +1,1 @@
-'''་ན་གྱི-་དྲྭ་ཚ་ཤི'''གྱུར་བ་དང།༣སྐད་སྙན་ཞིང་སྨྲ་བ་སྙན་པར་བཟུང་བའི་ཚིག་ཏུ་འགྱུར་བ་དང།༤བག་ཚ་བ་གྱུར་བ་དང།༣སྐད་སྙན་ཞིང་སྨྲ་བ་སྙན་པར་བཟུང་བའི་ཚིག་ཏུ་འགྱུར་བ་དང།༤བག་ཚ་བ་མེད་པར་འཁོར་གྱི་ནང་དུ་འགྲོ་བ་དང།༥ལྷ་དང་མི་རྣམས་དགའ་བར་འགྱུར་བ་དང།༦གཟི་བརྗིད་ཆེན་པོར་འགྱུར་བ་དང།༧གང་ཟག་ནི་འདི་ལྟ་སྟེ།སངས་རྒྱས་བཅོམ་ལྡན་འདས་རྣམས་དང།བྱང་ཆུབ་སེམས་དཔའ་རྣམས་དང།སངས་རྒྱས་ཀྱི་ཉན་ཐོས་རྣམས་དང་འགྲོགས་པར་འགྱུར་བ་དང།༨ལོངས་སྤྱོད་ཆེ་བར་འགྱུར་བ་དང།༩མཐོ་རིས་སུ་སྐྱེ་བར་འགྱུར་བ་དང།༡༠མྱུར་དུ་ཡོངས་སུ་མྱ་ངན་ལས་འདའ་བ་སྟེ།དེ་དག་ནི་དེ་བཞིན་གཤེགས་པའི་མཆོད་རྟེན་ལ་ཕྱག་འཚལ་བའི་ཕན་ཡོན་ནོ། །ཞེས་རྗེ་གུང་ཐང་པས་གམེད་པར་འཁོར་གྱི་ནང་དུ་འགྲོ་བ་དང།༥ལྷ་དང་མི་རྣམས་དགའ་བར་འགྱུར་བ་དང།༦གཟི་བརྗིད་ཆེན་པོར་འགྱུར་བ་དང།༧གང་ཟག་ནི་འདི་ལྟ་སྟེ།སངས་རྒྱས་བཅོམ་ལྡན་འདས་རྣམས་དང།བྱང་ཆུབ་སེམས་དཔའ་རྣམས་དང།སངས་རྒྱས་ཀྱི་ཉན་ཐོས་རྣམས་དང་འགྲོགས་པར་འགྱུར་བ་དང།༨ལོངས་སྤྱོད་ཆེ་བར་འགྱུར་བ་དང།༩མཐོ་རིས་སུ་སྐྱེ་བར་འགྱུར་བ་དང།༡༠མྱུར་དུ་ཡོངས་སུ་མྱ་ངན་ལས་འདའ་བ་སྟེ།དེ་དག་ནི་དེ་བཞིན་གཤེགས་པའི་མཆོད་རྟེན་ལ་ཕྱག་འཚལ་བའི་ཕན་ཡོན་ནོ། །ཞེས་རྗེ་གུང་ཐང་པས་གགྱུར་བ་དང།༣སྐད་སྙན་ཞིང་སྨྲ་བ་སྙན་པར་བཟུང་བའི་ཚིག་ཏུ་འགྱུར་བ་དང།༤བག་ཚ་བ་མེད་པར་འཁོར་གྱི་ནང་དུ་འགྲོ་བ་དང།༥ལྷ་དང་མི་རྣམས་དགའ་བར་འགྱུར་བ་དང།༦གཟི་བརྗིད་ཆེན་པོར་འགྱུར་བ་དང།༧གང་ཟག་ནི་འདི་ལྟ་སྟེ།སངས་རྒྱས་བཅོམ་ལྡན་འདས་རྣམས་དང།བྱང་ཆུབ་སེམས་དཔའ་རྣམས་དང།སངས་རྒྱས་ཀྱི་ཉན་ཐོས་རྣམས་དང་འགྲོགས་པར་འགྱུར་བ་དང།༨ལོངས་སྤྱོད་ཆེ་བར་འགྱུར་བ་དང།༩མཐོ་རིས་སུ་སྐྱེ་བར་འགྱུར་བ་དང།༡༠མྱུར་དུ་ཡོངས་སུ་མྱ་ངན་ལས་འདའ་བ་སྟེ།དེ་དག་ནི་དེ་བཞིན་གཤེགས་པའི་མཆོད་རྟེན་ལ་ཕྱག་འཚལ་བའི་ཕན་ཡོན་ནོ། །ཞེས་རྗེ་གུང་ཐང་པས་ག[[User:Billinghurst]] [[user:MarcoAurelio]]
+'''་ན་གྱི-་དྲྭ་ཚ་ཤི'''གྱུར་བ་དང།༣སྐད་སྙན་ཞིང་སྨྲ་བ་སྙན་པར་བཟུང་བའི་ཚིག་ཏུ་འགྱུར་བ་དང།༤བག་ཚ་བ་གྱུར་བ་དང།༣སྐད་སྙན་ཞིང་སྨྲ་བ་སྙན་པར་བཟུང་བའི་ཚིག་ཏུ་འགྱུར་བ་དང།༤བག་ཚ་བ་མེད་པར་འཁོར་གྱི་ནང་དུ་འགྲོ་བ་དང།༥ལྷ་དང་མི་རྣམས་དགའ་བར་འགྱུར་བ་དང།༦གཟི་བརྗིད་ཆེན་པོར་འགྱུར་བ་དང།༧གང་ཟག་ནི་འདི་ལྟ་སྟེ།སངས་རྒྱས་བཅོམ་ལྡན་འདས་རྣམས་དང།བྱང་ཆུབ་སེམས་དཔའ་རྣམས་དང།སངས་རྒྱས་ཀྱི་ཉན་ཐོས་རྣམས་དང་འགྲོགས་པར་འགྱུར་བ་དང།༨ལོངས་སྤྱོད་ཆེ་བར་འགྱུར་བ་དང།༩མཐོ་རིས་སུ་སྐྱེ་བར་འགྱུར་བ་དང།༡༠མྱུར་དུ་ཡོངས་སུ་མྱ་ངན་ལས་འདའ་བ་སྟེ།དེ་དག་ནི་དེ་བཞིན་གཤེགས་པའི་མཆོད་རྟེན་ལ་ཕྱག་འཚལ་བའི་ཕན་ཡོན་ནོ། །ཞེས་རྗེ་གུང་ཐང་པས་གམེད་པར་འཁོར་གྱི་ནང་དུ་འགྲོ་བ་དང།༥ལྷ་དང་མི་རྣམས་དགའ་བར་འགྱུར་བ་དང།༦གཟི་བརྗིད་ཆེན་པོར་འགྱུར་བ་དང།༧གང་ཟག་ནི་འདི་ལྟ་སྟེ།སངས་རྒྱས་བཅོམ་ལྡན་འདས་རྣམས་དང།བྱང་ཆུབ་སེམས་དཔའ་རྣམས་དང།སངས་རྒྱས་ཀྱི་ཉན་ཐོས་རྣམས་དང་འགྲོགས་པར་འགྱུར་བ་དང།༨ལོངས་སྤྱོད་ཆེ་བར་འགྱུར་བ་དང།༩མཐོ་རིས་སུ་སྐྱེ་བར་འགྱུར་བ་དང།༡༠མྱུར་དུ་ཡོངས་སུ་མྱ་ངན་ལས་འདའ་བ་སྟེ།དེ་དག་ནི་དེ་བཞིན་གཤེགས་པའི་མཆོད་རྟེན་ལ་ཕྱག་འཚལ་བའི་ཕན་ཡོན་ནོ། །ཞེས་རྗེ་གུང་ཐང་པས་གགྱུར་བ་དང།༣སྐད་སྙན་ཞིང་སྨྲ་བ་སྙན་པར་བཟུང་བའི་ཚིག་ཏུ་འགྱུར་བ་དང།༤བག་ཚ་བ་མེད་པར་འཁོར་གྱི་ནང་དུ་འགྲོ་བ་དང།༥ལྷ་དང་མི་རྣམས་དགའ་བར་འགྱུར་བ་དང།༦གཟི་བརྗིད་ཆེན་པོར་འགྱུར་བ་དང།༧གང་ཟག་ནི་འདི་ལྟ་སྟེ།སངས་རྒྱས་བཅོམ་ལྡན་འདས་རྣམས་དང།བྱང་ཆུབ་སེམས་དཔའ་རྣམས་དང།སངས་རྒྱས་ཀྱི་ཉན་ཐོས་རྣམས་དང་འགྲོགས་པར་འགྱུར་བ་དང།༨ལོངས་སྤྱོད་ཆེ་བར་འགྱུར་བ་དང།༩མཐོ་རིས་སུ་སྐྱེ་བར་འགྱུར་བ་དང།༡༠མྱུར་དུ་ཡོངས་སུ་མྱ་ངན་ལས་འདའ་བ་སྟེ།དེ་དག་ནི་དེ་བཞིན་གཤེགས་པའི་མཆོད་རྟེན་ལ་ཕྱག་འཚལ་བའི་ཕན་ཡོན་ནོ། །ཞེས་རྗེ་གུང་ཐང་པས་ག
