*Empty MediaWiki Message*

--- a/རྒྱ་ནག.mw
+++ b/རྒྱ་ནག.mw
@@ -1,12 +1,9 @@
-[[File:China 100.78713E 35.63718N.jpg|right|thumb|རྒྱ་ནག]]
+[[File:China 100.78713E 35.63718N.jpg|thumb|རྒྱ་ནག]]
 '''རྒྱ་ནག'''
 
 ----
 * [[རྒྱ་མི]]
 * [[ཀྲུང་ཀོ]]
-
-
-
 
 {{Asia}}
 
@@ -14,6 +11,3 @@
 
 [[Category:རྒྱ་ནག| ]]
 [[Category:འཛམ་གླིང་རྒྱས་བཤད]]
-
-
-[[et:Hiina#Hiina Rahvavabariik]]
