*Empty MediaWiki Message*

--- a/ལྷ་ས་.mw
+++ b/ལྷ་ས་.mw
@@ -1,5 +1,4 @@
-[[File:པོ་ཏ་ལ།_༢_.JPG|right|thumb|300px|པོ་ཏ་ལ།]]
-[[File:Lhasa.png|right|300px|]]
+[[File:Lhasa.png|thumb|]]
 
 '''ལྷ་ས'''་ནི་། བོད་ཀྱི་ལྟེ་གནས་གྲོང་ཁྱེར་ཡིན་ལ། [[བོད་རྒྱལ་སྲོང་བཙན]]་རྒྱལ་པོའི་དུས་ལ་[[དམར་པོ་རི]]འི་རྩེ་ལ་བརྩིགས་པ་རེད། འདི་ནི་བོད་ཀྱི་ཆབ་སྲིད་དང་། དཔལ་འབྱོར། རིག་གནས་ཀྱི་ལྟེ་གནས་ཡིན། སྔོ་ལྗང་ཅན་གྱི་ལྷ་ས་སྐྱིད་ཆུ་ནི་[[གཉན་ཆེན་ཐང་ལྷ]]འི་གངས་འཁྱག་བཞུ་བའི་ཆབ་རྒྱུན་ཡིན་ཞིང་དེ་ཉིད་ནགས་ཚལ་སྟུག་པའི་གྲོག་རོང་དང་། མུ་མཐའ་མེད་པའི་བྱང་ཐང་བརྒྱུད་དེ་ཆུ་ཤུར་ནས་[[ཡར་ཀླུང་གཙང་པོ]]་དང་འདྲེས་ཀྱི་ཡོད། གནའ་བོའི་གྲོང་ཁྱེར་ལྷ་ས་ནི་གཡུ་ལྟར་སྔོ་བའི་ཆུ་མོ་འདིའི་འགྲམ་དུ་མཆིས།
 
