*Empty MediaWiki Message*

--- a/ལྷ་ས་.mw
+++ b/ལྷ་ས་.mw
@@ -1,3 +1,4 @@
+[[File:The Barkhor, both a place for walking meditation and shopping.jpg|thumb|ལྷ་ས]]
 [[File:Lhasa.png|thumb|]]
 
 '''ལྷ་ས'''་ནི་། བོད་ཀྱི་ལྟེ་གནས་གྲོང་ཁྱེར་ཡིན་ལ། [[བོད་རྒྱལ་སྲོང་བཙན]]་རྒྱལ་པོའི་དུས་ལ་[[དམར་པོ་རི]]འི་རྩེ་ལ་བརྩིགས་པ་རེད། འདི་ནི་བོད་ཀྱི་ཆབ་སྲིད་དང་། དཔལ་འབྱོར། རིག་གནས་ཀྱི་ལྟེ་གནས་ཡིན། སྔོ་ལྗང་ཅན་གྱི་ལྷ་ས་སྐྱིད་ཆུ་ནི་[[གཉན་ཆེན་ཐང་ལྷ]]འི་གངས་འཁྱག་བཞུ་བའི་ཆབ་རྒྱུན་ཡིན་ཞིང་དེ་ཉིད་ནགས་ཚལ་སྟུག་པའི་གྲོག་རོང་དང་། མུ་མཐའ་མེད་པའི་བྱང་ཐང་བརྒྱུད་དེ་ཆུ་ཤུར་ནས་[[ཡར་ཀླུང་གཙང་པོ]]་དང་འདྲེས་ཀྱི་ཡོད། གནའ་བོའི་གྲོང་ཁྱེར་ལྷ་ས་ནི་གཡུ་ལྟར་སྔོ་བའི་ཆུ་མོ་འདིའི་འགྲམ་དུ་མཆིས།
@@ -24,7 +25,6 @@
 <p>བོད་ཟླ་བཅུ་པའི་ཚེས་བཅོ་ལྔ་ཉིན། དཔལ་ལྷའི་དུས་ཆེན་དངོས་གཞིའི་མཛད་སྒོར་མཚོན་ན། ཉིན་དེའི་ཞོགས་པ། ལྷ་ས་ཁུལ་གྱི་ཁྱིམ་འཛིན་བུད་མེད་ཚོ་འཚང་ཁ་ཤིག་ཤིག་གིས་དཔལ་ལྷ་མོར་མཆོད་ མཇལ་དུ་འགྲོ་བ་དང༌། དེ་ནས་ཉི་འོད་ས་གཞིར་ཁྱབ་པ་དང་མཉམ་དུ་དཔལ་ལྷའི་སྐུ་བརྙན་དེ་གཙུག་ལག་ཁང་གི་ཁྱམས་རའི་མཐིལ་དུ་གདན་དྲངས་པའི་སྐབས་ལ། སྙན་ཤལ་སོགས་ཕུལ་རྗེས། གཙུག་ལག་ཁང་གི་སྒོ་མོ་དང༌ཁྱམས་ར་བརྒྱུད་ནས་དཔལ་ལྷ་བར་སྐོར་དུ་གདན་འདྲེན་ཞུ་བ་དང༌། དེའི་སྐབས་སུ་བར་སྐོར་དུ་འཛོམས་པའི་མཆོད་མཇལ་བ་ཚོས། སྙན་ཤལ་འབུལ་བ་དང་མཆོད་མཇལ་བྱེད་སྲོལ་ཡོད།</p>
 <p>དཔལ་ལྷ་མོ་གཙུག་ལག་ཁང་ནས་ཐོན་ཏེ་ཐོག་མར་ཀླུ་སྦུག་ཏུ་ཕེབས་རྗེས། གཏོར་ཟོར་འཕེན་པ་དང༌། དེ་ནས་ཁྲོམ་གཟིགས་ཁང་གི་ཐང་སྡེར་བར་སྐོར་གྱི་ཤར་ལམ་ལྷོ་ངོས་སུ་གཏོར་ཟོར་འཕེན་པའི་མཛད་སྒོ་བཅས་ཡོད། གང་ལྟར་ཉིན་འདིར། ལྷ་མོ་ཕེབས་ལམ་འཁེལ་ས་དག་ན་ཡོད་པའི་ཁྱིམ་མི་ཚོས་སྙན་ཤལ་སོགས་འབུལ་བའི་སྲོལ་ཡོད།</p>
 <p>དུས་ཆེན་འདི་དང་འབྲེལ་བའི་ཡུལ་སྲོལ་གྱི་སྐོར་ནས་ཞུས་ན།  དེ་སྔར་མཚོན་ན། བུ་མོ་ལོ་ན་བཅུ་དྲུག་ཟིན་སྐབས་སྤ་ཕྲུག་གཡོག་སྲོལ་གྱི་མཛད་སྒོ་དེ་ཡང༌། དཔལ་ལྷའི་དུས་ཆེན་གྱི་ཉིན་འདིར་བྱེད་པ་ལྟ་བུར་ཡོད་པ་དང༌། གཞན་ཡང༌། དཔལ་ལྷའི་དུས་ཆེན་ཐོན་ལ་ཉེ་བའི་སྐབས་སུ་དགའ་ཉེ་སྤུན་མཆེད་དང༌། གྲོང་པ་ཁྱིམ་མཚེས་ཀྱི་ཕྲུ་གུ་ལོ་ཆུང་ཚོ། གཡོག་པོ་བཅས་ནས་དཔལ་ལྷའི་མདུན་ཆང་ཞེས་དངུལ་སློང་སྲོལ་ཡོད་པར། དེ་ལ་མང་ཉུང་ལ་མ་ལྟོས་པའི་དངུལ་སྟེར་སྲོལ་ཡོད་སྟབས། དཔལ་ལྷའི་དུས་ཆེན་ཐོན་ལ་ཉེ་བའི་སྐབས་དེ་ནི་དབུལ་ཁུལ་གྱི་ཕྲུ་གུ་ཚོར་དངུལ་གསོག་པའི་སྐལ་བ་ཡག་ཤོས་ཤིག་ཏུ་གྱུར་ཡོད། ལྷ་ས་གྲོང་ཁྱེར་ལ་མཚོན་ན། དེང་སྐབས་དཔལ་ལྷའི་དུས་ཆེན་ཐོན་ལ་ཉེ་སྐབས། བུད་མེད་ཚོས་སྐྱེས་པ་ཚོར་དངུལ་དང་རྔན་པ་སློང་སྲོལ་ཞིག་དར་བཞིན་ཡོད། ཉིན་འདིར་གནམ་གཤིས་མ་འདྲ་བ་ཞིག་སྟོན་གྱི་ཡོད་པ་ནི། ཉིན་འདིའི་ཕྱི་དྲོ་ལྷ་ས་གྲོང་ཁྱེར་གྱི་གཤམ་གཤིས་ནི་རླུང་འཚུབ་ཅན་གྱི་ལྷགས་པ་ཚ་པོ་ཞིག་ལྡང་གི་ཡོད་པར་བོད་མི་ཚོས་ལྷ་མོ་ར་བཟི་བ་རེད་ཅེས་ཤོད་སྲོལ་ཡོད།</p></div>
-[[File:The Barkhor, both a place for walking meditation and shopping.jpg|right|250px|]]
 
 == པར་རིས་བར་འཁྱམས། ==
 
@@ -34,18 +34,10 @@
 == ད་དུང་གཟིགས། ==
 == ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
 
-
-
-
 -------
 * [[ཀྲུང་ཀོ]]
 * [[བོད།]]
 ** [[བོད་སྐད]]
-
-
-
-
-
 
 [[Category:བོད]]
 [[Category:གྲོང་ཁྱེར།]]
