*Empty MediaWiki Message*

--- a/ཁང་ཆེས་.mw
+++ b/ཁང་ཆེས་.mw
@@ -1,5 +1,5 @@
 ཤིང་དང་ ལྕགས་ཀྱིས་ བཟོ་བཟོ་བའི་ ཁྱིམ་ནང་ གི་ཅ་ལ་ཚུ་ལུ་ཁང་ཆེས་ ཟེར་སླབ་འོང།
-[[File:Dom Uphagena - 010.JPG|right|thumbnail|300px|ཁང་ཆེས་]]
+[[File:Dom Uphagena - 010.JPG|thumb|ཁང་ཆེས་]]
 
 <br>
 <gallery>
