[[Special:LintErrors/bogus-image-options]]

--- a/ཏོ་ཀན་ཏིནསི་.mw
+++ b/ཏོ་ཀན་ཏིནསི་.mw
@@ -2,10 +2,10 @@
 རྒྱལ་ས་[[པལ་མསི་]]།
 
 
-[[File:Bandeira do Tocantins.svg|300px|thumbs|]]
-[[File:Brazil State Tocantins.svg|300px|thumbs|]]
-[[File:Carolina 11.jpg|300px|thumbs|ཏོ་ཀན་ཏིནསི་ཆུ་ཀ་རོ་ལི་ན་ནང་ལ།]]
-[[File:Jalapão.jpg|300px|thumbs|ཞ་ལ་པན།]]
+[[File:Bandeira do Tocantins.svg|300px|thumb]]
+[[File:Brazil State Tocantins.svg|300px|thumb]]
+[[File:Carolina 11.jpg|300px|thumb|ཏོ་ཀན་ཏིནསི་ཆུ་ཀ་རོ་ལི་ན་ནང་ལ།]]
+[[File:Jalapão.jpg|300px|thumb|ཞ་ལ་པན།]]
 
 
 -----
