[[Special:LintErrors/bogus-image-options]]

--- a/རོན་དོ་ནིཡ་.mw
+++ b/རོན་དོ་ནིཡ་.mw
@@ -2,9 +2,9 @@
 རྒྱལ་ས་[[པོར་ཏོ་ཝེ་ལྷོ་]]།
 
 
-[[File:Bandeira de Rondônia.svg|300px|right|thumbs|]]
-[[File:Brazil State Rondonia.svg|300px|right|thumbs|]]
-[[File:St.Antoniocascade.jpg|300px|right|thumbs|ཏོ་ཀན་ཏིནསི་ཆུ་ཀ་རོ་ལི་ན་ནང་ལ།]]
+[[File:Bandeira de Rondônia.svg|300px|right|thumb]]
+[[File:Brazil State Rondonia.svg|300px|right|thumb]]
+[[File:St.Antoniocascade.jpg|300px|right|thumb|ཏོ་ཀན་ཏིནསི་ཆུ་ཀ་རོ་ལི་ན་ནང་ལ།]]
 
 
 -----
