[[Special:LintErrors/bogus-image-options]]

--- a/གོ་ཡཟི་.mw
+++ b/གོ་ཡཟི་.mw
@@ -2,9 +2,9 @@
 རྒྱལ་ས་[[གོ་ཡ་ནིཡ་]]།
 
 
-[[File:Flag of Goiás.svg|300px|right|thumbs|]]
-[[File:Brazil State Goias.svg|300px|right|thumbs|]]
-[[File:A 5 km.JPG|300px|right|thumbs|]]
+[[File:Flag of Goiás.svg|300px|right|thumb]]
+[[File:Brazil State Goias.svg|300px|right|thumb]]
+[[File:A 5 km.JPG|300px|right|thumb]]
 
 
 -----
