[[Special:LintErrors/bogus-image-options]]

--- a/རྫོང་ཁའི་ལྡེ་སྒྲོམ་.mw
+++ b/རྫོང་ཁའི་ལྡེ་སྒྲོམ་.mw
@@ -2,10 +2,10 @@
 
 
 
-[[File:KBD-DZ-noshift-2009.png|420px||Dzongkha keyboard]]
+[[File:KBD-DZ-noshift-2009.png|420px|Dzongkha keyboard]]
 <br>
 
-[[File:KBD-DZ-shift-2009.png|420px||Dzongkha keyboard - shift state]]
+[[File:KBD-DZ-shift-2009.png|420px|Dzongkha keyboard - shift state]]
 <br>
 
 
