Reverted edits by [[Special:Contributions/2600:1700:1E0:6B2F:E45D:DE68:94A6:EAEF|2600:1700:1E0:6B2F:E45D:DE68:94A6:EAEF]] ([[User talk:2600:1700:1E0:6B2F:E45D:DE68:94A6:EAEF|talk]]) to last revision by [[User:Pitpisit|Pitpisit]]

--- a/༡༨༠༣.mw
+++ b/༡༨༠༣.mw
@@ -1,1 +1,14 @@
+== དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
+* [[མི་དབང་རྒྱལཔོ།]] :
 
+== བྱ་སྒོ། ==
+
+== སྐྱེ་ནི། ==
+
+== འཆི་བ། ==
+
+== ཁ་སྐོང༌། ==
+
+{{stub}}
+
+[[Category:ལོ་གྲངས]]
