--- a/༡༨༠༠.mw
+++ b/༡༨༠༠.mw
@@ -1,1 +1,12 @@
+== དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
+* [[མི་དབང་རྒྱལཔོ།]] :
 
+== བྱ་སྒོ། ==
+
+== སྐྱེ་ནི། ==
+
+== འཆི་བ། ==
+
+== ཁ་སྐོང༌། ==
+
+[[Category:ལོ་གྲངས]]
