--- a/༡༨༠༡.mw
+++ b/༡༨༠༡.mw
@@ -1,1 +1,14 @@
+== དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
+* [[མི་དབང་རྒྱལཔོ།]] :
 
+== བྱ་སྒོ། ==
+
+== སྐྱེ་ནི། ==
+
+== འཆི་བ། ==
+
+== ཁ་སྐོང༌། ==
+
+{{stub}}
+
+[[Category:ལོ་གྲངས]]
