*Empty MediaWiki Message*

--- a/༢༠༡༦.mw
+++ b/༢༠༡༦.mw
@@ -1,4 +1,7 @@
+{{Delete|test page}}
+
 == དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
+
 * [[མི་དབང་རྒྱལཔོ།]] : [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
 * [[སྲིད་བློན།]] : [[Tshering Tobgay]]
 
