*Empty MediaWiki Message*

--- a/གྷེ་བྷོན.mw
+++ b/གྷེ་བྷོན.mw
@@ -1,4 +1,4 @@
-རྒྱལ་ཁབ ''' གྷེ་བྷོན། '''
+{{Delete|test page}}རྒྱལ་ཁབ ''' གྷེ་བྷོན། '''
 [[image:Flag of Gabon.svg|100px]]
 [[image:Coat of arms of Gabon.svg|100px]]
 
