--- a/༢༠༡༨.mw
+++ b/༢༠༡༨.mw
@@ -1,6 +1,6 @@
 == དབུ་ཁྲིད་ཀྱི་གོ་འཕང༌། ==
-* [[མི་དབང་རྒྱལཔོ།]] :
-* [[སྲིད་བློན།]] : 
+* [[མི་དབང་རྒྱལཔོ།]] : [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
+* [[སྲིད་བློན།]] :
 
 == བྱ་སྒོ། ==
 
