*Empty MediaWiki Message*

--- a/ཨེན་ཊཱག་ཊི་ཀ་.mw
+++ b/ཨེན་ཊཱག་ཊི་ཀ་.mw
@@ -1,17 +1,19 @@
+[[File:Antarctica (orthographic projection).svg|thumb|ཨེན་ཊཱག་ཊི་ཀ་]]
 [[File:Antarctica 6400px from Blue Marble.jpg|right|thumb|ཨེན་ཊཱག་ཊི་ཀ་]]
 '''ཨེན་ཊཱག་ཊི་ཀ་'''
-
-
-
-
 ཨིན་ཊར་ནེཌ་འདི་ འགོ་ངག་པ་ར་
-
-
 ----
 * [[ཨཕ་རི་ཀ་]]
 
+<gallery>
+File: 061212-nordkapp.jpg
+File:GletscherMM.jpg
+File:Fryxellsee Opt.jpg
+File:Mount Erebus Aerial 2.jpg
+File:Aurore australe - Aurora australis.jpg
+</gallery>
 
-
+{{Commons|Antarctica|ཨེན་ཊཱག་ཊི་ཀ་}}
 {{stub}}
 
 [[Category:འཛམ་གླིང་རྒྱས་བཤད]]
