--- a/ཀྲོང་གསར་རྫོང་ཁག.mw
+++ b/ཀྲོང་གསར་རྫོང་ཁག.mw
@@ -33,7 +33,7 @@ Trongsa-Chendebji-Choerten-04-2015-gje.jpg|
 == དཔྱད་གཞིའི་དཀར་ཆག། ==
 == ད་དུང་གཟིགས། ==
 == ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
-
+{{Reflist}}
 
 {{stub}}
 
