*Empty MediaWiki Message*

--- a/ཨཕ་ག་ནིསི་ཏཱན་.mw
+++ b/ཨཕ་ག་ནིསི་ཏཱན་.mw
@@ -1,4 +1,4 @@
-[[File:Coat of arms of Afghanistan.svg|right|150px]]
+[[File:National emblem of Afghanistan.svg|right|150px]]
 [[File:Flag of Afghanistan.svg|right|200px]]
 [[File:Afghanistan in its region.svg|right|thumb|280px|ཨཕ་ག་ནིསི་ཏཱན་]]
 
