--- a/བལ་ཡུལ་.mw
+++ b/བལ་ཡུལ་.mw
@@ -1,5 +1,6 @@
 [[File:Nepal in its region.svg|right|thumb|བལ་ཡུལ་]]
 [[File:Flag of Nepal.svg|right|thumb]]
+[[File:New Emblem of Nepal.svg|right|thumb]]
 '''བལ་ཡུལ་''' 
 
 ----
