*Empty MediaWiki Message*

--- a/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
+++ b/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
@@ -19,6 +19,7 @@
 * '''[[ཨན་ཊི་གཱ་ཡ་དང་པར་བུ་ཌ་]]''' - ཨན་ཊི་གཱ་ཡ་དང་པར་བུ་ཌ  Antigua and Barbuda 安提瓜和巴布达
 * '''[[ཨ་རུ་བྷ་]]'''  - ཨ་རུ་བྷ་  ནེ་རྡུར་ལན་ཌིའི་རྒྱལ་ཁོངས  Aruba 阿鲁巴
 * '''[[ཨ་མེ་རི་ཀ་]]''' – ཨ་རི་    ཨ་མེ་རི་ཀ་  America   ཨ་མེ་རི་ཀ་མངའ་སྡེ་གཅིག་སྡུད United States Of America 美国
+* ཨེ་ཌ་ལནྜ་ - Atlanta
 
 = བྷ  (B) =
 * '''[[བྷ་ཧ་མ་སུ་]]''' – བྷ་ཧ་མ་སུ་མནའ་མཐུན་རྒྱལ་ཁབ Commonwealth of The Bahamas 巴哈马
