--- a/མི་ནས་ཞེ་རའིས་.mw
+++ b/མི་ནས་ཞེ་རའིས་.mw
@@ -1,7 +1,7 @@
 [[File:Brazil State MinasGerais.svg|180px|right]]
 [[File:Bandeira de Minas Gerais.svg|180px|right]]
 
-'''མི་ནས་ཞེ་རའིས་'''(པོར་ཅུ་གལ་ཁ་:Minas Gerais, MG)ནི་[[བྲ་ཛིལ་]]ཤར་ལྷོ་ལུང་ཕྱོགས་ནང་རྒྱལ་ཁབ་ཅིག་ཨིན།་རྒྱལ་ས་[[བྷེ་ལོ་འོ་རི་ཟོན་ཏེ་]]ཨིན།མི་འབོར་༢༠༥༩༣༣༦༦མི་དང་རྒྱ་ཚེད་༥༨༦༥༢༢km²།
+'''མི་ནས་ཞེ་རའིས་'''(པོར་ཅུ་གལ་ཁ་:Minas Gerais, MG)ནི་[[བྲ་ཛིལ་]]ཤར་ལྷོ་ལུང་ཕྱོགས་ནང་རྒྱལ་ཁབ་ཅིག་ཨིན།་རྒྱལ་ས་[[བྷེ་ལོ་འོ་རི་ཟོན་ཏེ་]]ཨིན།མི་འབོར་༢༠༥༩༣༣༦༦མི་དང་རྒྱ་ཚེད་༥༨༦༥༢༢km²། no butão as pessoas peidam
 
 <gallery>
 File:Marins.JPG|200px|
