Reverted edits by [[Special:Contributions/170.78.214.210|170.78.214.210]] ([[User talk:170.78.214.210|talk]]) to last revision by [[User:Impro|Impro]]

--- a/བཱརཱ་ཛིལ་.mw
+++ b/བཱརཱ་ཛིལ་.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Brazil.svg|right|thumb]]
 '''བཱརཱ་ཛིལ་'''(Brasil)ནི་[[ལྷོ་ཨ་མེ་རི་ཀ་]]འི་རྒྱལ་ཁབ་ཅིག་ཨིན།
 རྒྱལ་ས་[[བྲ་ཛི་ལི་ཡ་]]ཨིན་དང་གྲོང་སྡེ་སྦོམ་ཤོས་[[སན་པའུ་ལོ་]]ཨིན། 
-ཁོའི་རྒྱ་ཚད་༨་༥༡༥་༨༠༠km²འདུག་དང་མི་འབོར་༢༠༡༠༣༢༧༡༤་མི་འདུག། Alôoooooooo BUTÃO! 
+ཁོའི་རྒྱ་ཚད་༨་༥༡༥་༨༠༠km²འདུག་དང་མི་འབོར་༢༠༡༠༣༢༧༡༤་མི་འདུག།
 
 ===བཱརཱ་ཛིལ་གི་རྒྱལ་ཁབ།===
 [[File:Brazil political map (pt).gif|right|300px|thumb|བཱརཱ་ཛིལ་གི་རྒྱལ་ཁབ་དང་ལུང་ཕྱོགས།]]<br>
