--- a/ཇཱར་མ་ནི.mw
+++ b/ཇཱར་མ་ནི.mw
@@ -18,6 +18,7 @@
 
 
 ----
+[[File:Brandenburger Tor nachts 2012-07.jpg|thumb]]
 
 
 [[File:Uetersen Klosterkirche 00.jpg|thumb|left|[[ཨུ་ཏེར་སེན]]]]
