--- a/ལེ་བཱ་ནཱོན་.mw
+++ b/ལེ་བཱ་ནཱོན་.mw
@@ -1,5 +1,6 @@
 [[File:LocationLebanon.svg|right|thumb|280px|ལེ་བཱ་ནཱོན་]]
 [[File:Flag of Lebanon.svg|thumb|right]]
+[[File:Beirutcity.jpg|thumb|ལེ་བཱ་ནཱོན་]]
 '''ལེ་བཱ་ནཱོན''' 
 
 ----
