*Empty MediaWiki Message*

--- a/རག་བི.mw
+++ b/རག་བི.mw
@@ -1,6 +1,7 @@
 {{translate}}
 [[File:New Zealand vs South Africa 2006 Tri Nations Line Out.JPG|thumb|]]
-'''Rugby''' is an english sport. It is named after the Rugby School in the [[ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ]].
+'''Rugby''' is an english sport. It is named after the Rugby School in the [[ཡུ་ནའི་ཊེཊ་ཀིང་ཌམ]].help bro im stuck in iran
+
 
 
 {{stub}}
