--- a/བལ་ཡུལ་.mw
+++ b/བལ་ཡུལ་.mw
@@ -6,6 +6,18 @@
 ----
 * [[ཀཊི་མཱན་ཌུ]]
 
+<br><gallery class=center caption="བལ་ཡུལ་">
+Kathmandu-Durbar Square-36-Jagannath-Vishnu-Kageshwor-2007-gje.jpg|Kathmandu
+Pashupatinath-Mrigasthali-42-Glocke-2014-gje.jpg|Pashupatinath
+Bhaktapur-Palast der 55 Fenster-20-Schnitzerei-2013-gje.jpg|Bhaktapur
+Changu Narayan-Skulptur-18-Narasimha Vishnu-2014-gje.jpg|Changu Narayan
+Patan-Palastplatz-10-Yoganarendramallasaeule-2013-gje.jpg|Patan
+Dingboche to Chhukung-78-Imja Tse-Ama Dablam-Taboche-Panorama-2007-gje.jpg|Himalaya
+Dzongla to Lobuche-84-Weg nach Lobuche-2007-gje.jpg|Himalaya
+Mustang-Lo Gekar-28-Lhatos-Gebetsfahnen-2015-gje.jpg|Mustang
+Mustang-Ghami to Lo Gekar-32-2015-gje.jpg|Mustang
+</gallery>
+
 {{Asia}}
 
 {{stub}}
