Reverted edits by [[Special:Contributions/𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖1|𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖1]] ([[User talk:𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖1|talk]]) to last revision by [[User:79.165.138.46|79.165.138.46]]

--- a/གཡང་གཞི་.mw
+++ b/གཡང་གཞི་.mw
@@ -1,1 +1,5 @@
+1 མི་ལྤགས་སྦུབས་བཤུས་ཆ་ཚང་གི་མིང།  2 སྲོག་ཆགས་ཀྱི་མགོ་སུག་གི་པགས་པ་ཆ་ཚང་བ་ཡོད་པའི་པགས་ལྡན།
+1 a complete human skin  2complete animal skin including the head and
+feet.
 
+[[Category:ནང་དོན་དཀར་ཆག]]
