Reverted edits by [[Special:Contributions/𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖1|𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖1]] ([[User talk:𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖1|talk]]) to last revision by [[User:Impro|Impro]]

--- a/ལྗོངས་རྒྱུ་.mw
+++ b/ལྗོངས་རྒྱུ་.mw
@@ -1,1 +1,9 @@
+ལྗོངས་རྒྱུ་ནི་ལྟ་སྐོར་བྱེད་བཞིན་གནས་དང་གནས་རྒྱུད་ནས་སྐྱོད་པར་གོ་བར་སྙམ། དབྱིན་ཇིར་  Tourism ཟེར
 
+ལྗོངས་རྒྱུ་བ་ནི་ལྗོངས་རྒྱུར་བྱེད་མཁན་ལ་གོ་  དབྱིན་ཇིའི་སྐད་དུ Traveller ཡང་ན་  Tourist
+
+རྐང་འགྲུལ་ལྗོངས་རྒྱུ་ནི་རྐང་ཐང་དུ་སྐྱོད་པའི་ལྗོངས་རྒྱུ་བར་གོ། དབྱིན་ཇིའི་སྐད་དུ Trekker 
+
+དེ་བཞིན་རྐང་འགྲུལ་ནི་རྐང་ཐང་དུ་བགྲོད་པའི་བྱ་བར་གོ་དགོས་ན་དབྱིན་ཇིའི་སྐད་དུ་ཡང་Trek དང་ Hike ལ་གོའོ།
+
+[[Category:ནང་དོན་དཀར་ཆག]]
