--- a/སིཔཱེན་.mw
+++ b/སིཔཱེན་.mw
@@ -1,1 +1,14 @@
+[[File:EU-Spain.svg|right|thumb|]]
+[[File:Alhambradesdegeneralife.jpg|right|thumb|སིཔཱེན་]]
+[[File:Flag of Spain.svg|right|thumb]]
+'''སིཔཱེན་'''
 
+----
+
+* [http://commons.wikimedia.org/wiki/Category:Spain Commons]
+{{Europe}}
+
+{{stub}}
+
+[[Category:ཡོ་རོབ་གླིང་]]
+[[Category:རྒྱལ་ཁབ]]
