Reverted edits by [[Special:Contributions/𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖1|𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖1]] ([[User talk:𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖𪛖1|talk]]) to last revision by [[User:Addbot|Addbot]]

--- a/ཨས་ཊེཡེ་ལི་ཡ.mw
+++ b/ཨས་ཊེཡེ་ལི་ཡ.mw
@@ -1,1 +1,19 @@
+[[File:Flag of Australia.svg|right|thumbnail|]]
+[[File:Australia satellite plane.jpg|right|thumbnail|ཨས་ཊེཡེ་ལི་ཡ་]]
+'''ཨས་ཊེཡེ་ལི་ཡ་''' 
 
+----
+* [[སིཌི་ནི]]
+* [[མེལ་བོརོན]]
+* [[ཨ་ཌི་ལེ་ཌི]]
+* [[བིརིསི་བེན]]
+* [[བོརོ་ཀཱན་ཧིལ]]
+* [[དར་ཝིན]]
+* [[ཧོ་བཱཊི]]
+* [[ལིན་ཌི་མེན]]
+* [[ལོརོཌི་ཧོ་ཝི]]
+* [[པརཐ]]
+
+{{stub}}
+
+[[Category:རྒྱལ་ཁབ]]
