--- a/རྩི་རང་རྫོང་ཁག.mw
+++ b/རྩི་རང་རྫོང་ཁག.mw
@@ -7,7 +7,8 @@
 == ཡུལ་ཚོ། ==
 ==མིང་ཐོགས་ཚུལ།==
 == དུས་ཆེན། ==
-== མི་སྣ། ==
+== མི་སྣ། ==''''шаблоноаь
+олщо др'''''
 
 == པར་རིས་བར་འཁྱམས། ==
 <center>
