deleted image replaced

--- a/ཐིམ་ཕུག།.mw
+++ b/ཐིམ་ཕུག།.mw
@@ -21,7 +21,7 @@
 <br><gallery caption="Thimphu">
 Thimphu-08-vom Buddha Dordenma-Stadion-2015-gje.jpg|Thimphu
 Thimphu-30-Verkehrspolizist-2015-gje.jpg|Downtown Thimphu
-Thimphu-Buddha Dordenma-14-2015-gje.jpg|Buddha Dordenma
+Thimphu-Buddha Dordenma-50-Halle-2015-gje.jpg|Buddha Dordenma
 Thimphu-Buddha Dordenma-28-68. Erzabt-2015-gje.jpg|
 Thimphu-Dzong-18-Adler-2015-gje.jpg|Dzong
 Thimphu-Markt-08-Frau mit Kleinkind-2015-gje.jpg|Market
