--- a/རྒྱ་གར.mw
+++ b/རྒྱ་གར.mw
@@ -1,7 +1,6 @@
 ''' ཨིན་ཌི་ཡ། (རྒྱ་གར) '''
 
-[[File:India population density map en.svg|right|thumb|རྒྱ་གར་]]
-[[File:Flag of India.svg|thumb|right]]
+[[File:India population density map en.svg|right|thumb|རྒྱ་གར་]]<small><ref>Tibetan Dara is one of the two hills (dara in local language)(the other being Deolo Hill) connected by a ridge on which the town of Kalimpong stands. The hill is 1,372 metres (4,501 feet) above mean sea level and is located south west of the town. The hill commands a panoramic view overlooking the town of Kalimpong, the snow clad Himalayan ranges of West Sikkim, the Teesta River and its valleys and the Jelepla Pass in the distance. A golf course is also present just off the summit.</ref></small>[[File:Flag of India.svg|thumb|right]]
 
 རྒྱལ་ས [[ནིའུ་ཌེ་ལི]] ''(New Delhi)''།
 
@@ -10,7 +9,7 @@
 |-
 ! State !! Capital !! Area (km²)  !! Population
 |-
-| ཨན་དར་ར་ པར་དེ་ཤི། || ཧེདྲ་བཱད་  || 275,045  || 75,727,541 
+| ཨན་དར་ར་ པར་དེ་ཤི || ཧེདྲ་བཱད་ || 275,045  || 75,727,541 
 |-
 | ཨ་རུ་ན་ཅཱལ། || ཨི་ཊ་ན་གར། || 83,743  || 1,091,117
 |-
