--- a/རྫོང་ཁ་.mw
+++ b/རྫོང་ཁ་.mw
@@ -18,10 +18,10 @@
 
 == དཔེ་ཡིག། ==
         
- ཨ་ཡིག་དཀར་མཛེས་ལས་འཁྲུངས་ཤེས་བློའི་གཏེར།།
+ དཀར་མཛེས་ཨ་ཡིག་ལས་འཁྲུངས་ཤེས་བློའི་གཏེར།།
  ཕས་རྒོལ་ཝ་སྐྱེས་གཟིལ་གནོན་གདོང་ལྔ་བཞིན།།
- ཆགས་ཐོགས་ཀུན་འབྲེལ་མཚུངས་མེད་འཇམ་དབྱངས་མཐུས།།
- མ་གཱམ་མཁས་པའི་གཙོ་བོ་ཉིད་གྱུར་ཅིག།
+ ཆགས་ཐོགས་ཀུན་བྲལ་མཚུངས་མེད་འཇམ་དབྱངས་མཐུས།།
+ མ་ཧཱ་མཁས་པའི་གཙོ་བོ་ཉིད་གྱུར་ཅིག།
 
 == འབྲེལ་མཐུད ==
 
