--- a/ཇཱར་མ་ནི.mw
+++ b/ཇཱར་མ་ནི.mw
@@ -5,7 +5,7 @@
 {| border="0" cellpadding="2" cellspacing="0"
 |-
 | align="center" width="140px" | [[File:Flag of Germany.svg|125px|]]
-| align="center" width="140px" | [[File:Coat of Arms of Germany.svg|105px]]
+| align="center" width="140px" | [[File:Coat of arms of Germany.svg|105px]]
 |}
 |-
 | align=center colspan=2 | [[File:LocationGermany.png|250px]]
