*Empty MediaWiki Message*

--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -34,7 +34,47 @@
 |-
 | Time zone || UTC+༦
 |-
-| རྒྱལ་པོའི་བརྟན་བཞུགས། || [[འབྲུག་ཙན་དན་]]<br />
+| རྒྱལ་པོའི་བརྟན་བཞུགས། 
+
+༈ འབྲུག་གི་རྒྱལ་པོའི་བརྟན་བཞུགས།
+
+ས་སྐྱོང་དབང་ཕྱུག་ཆེན་པོ་ཞིང་གཤེགས་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་ གནམ་ལོ་ཆུ་འབྲུག་ སྤྱི་ལོ་༡༩༥༢ ལོ་ལུ་ རྒྱལ་པོའི་གསེར་ཁྲི་སྟེང་མངའ་གསོལ་ཞུས། སྤྱི་ལོ་༡༩༥༣ ལས་ བདེ་ཆེན་ཆོས་གླིང་ན་ལུ་ཕོ་བྲང་བཞེངས། ཐིམ་ཕུ་ལུ་རྒྱལ་ས་ལྟེ་བའི་ཕྱག་ལཱ་ཚུ་འགོ་བཙུགས་པའི་དུས་སྐབས་སུ་ རྒྱལ་མགྲོན་འཕྲིན་ལས་རྡོ་རྗེ་མཆོག་གིས་ ཡར་སྟོད་ལས་རྒྱ་ནག་གི་རྒྱལ་ཁབ་ སྨད་ལས་རྒྱ་གར་གི་རྒྱལ་ཁབ་ རྒྱལ་ཁབ་གཞན་དང་གཞན་ག་ར་ལུ་ རྒྱལ་ཁབ་རང་རང་སོ་སོའི་རྒྱལ་ལུགས་འདུག ། ང་བཅས་འབྲུག་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ལེ་ཤ་བྱོན་ཡོད་རུང་ རྒྱལ་པོའི་བརྟན་བཞུགས་མིན་འདུག་ཟེར་བའི་གྲོས་འཆར་ཚུ་ཡང་ཡང་གནང་ཡོདཔ་ལས། མཐའ་མ་ཐུགས་ཐག་བཅད་གནང་སྟེ་ ཞིང་གཤེགས་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་ལུ་ཞུཝ་ད་ འདི་རྒྱལ་ཁབ་ལུ་དགོཔ་ངེས་བརྟན་ཨིནམ་ལས་ ཚིག་འདི་ཕལ་སྐད་སྦེ་ མི་སེར་མི་ནགཔ་ཀུན་གྱིས་ཧ་གོ་ཚུགསཔ་སྦེ་ བརྩམས་དགོས་པའི་བཀའ་གནང་ནུག །
+
+དེ་བསྒང་ཤེས་བྱའི་གནས་ཀུན་ལ་མཁས་དང་གྲུབ་པའི་སློབ་དཔོན་ སྒྲ་སློབ་ཐུབ་བསྟན་ནོར་བུ་མཆོག་ ཡོངས་གྲགས་ལུ་སྒྲ་སློབ་རྣམ་རྒྱལ་ཟེར་ཡང་ཞུཝ་ཨིན་མས། སྒྲ་སློབ་མཆོག་ལུ་ རྒྱལ་པོའི་བརྟན་བཞུགས་གི་རྩ་ཚིག་ གསར་རྩོམ་མཛད་དགོས་པའི་སྐུལ་མ་ལྷོདཔ་དང་འདྲེས་ཏེ་ དང་པོ་ཚིག་རྐང་བཅུ་གཉིས་ཀྱི་སྒོ་ལས་ བརྟན་བཞུགས་གསར་རྩོམ་མཛད་གནང་ནུག ། དེ་ཡང་།
+
+ལྷོ་ཙན་དན་བཀོད་པའི་རྒྱལ་ཁབ་ནང་།།
+ལུགས་གཉིས་ཀྱི་བསྟན་པ་སྐྱོང་བའི་མགོན།།
+འབྲུག་རྒྱལ་པོ་མངའ་བདག་རིན་པོ་ཆེ།།
+སྐུ་འགྱུར་མེད་ཞབས་པད་བརྟན་པར་ཤོག །
+
+ཐུགས་དགོངས་པའི་ཤེས་རབ་འཕེལ་འཕེལ་ནས།།
+ལུགས་ཆོས་སྲིད་འཕྲིན་ལས་གོང་དུ་འཕེལ།།
+དཔལ་མངའ་ཐང་དགུང་དང་མཉམ་ནས་ཀྱང་།།
+འབངས་མི་སེར་དར་ཞིང་རྒྱས་པར་ཤོག །
+
+དཔོན་ཆོས་རྗེ་འབྲུག་པའི་རྒྱལ་ཁབ་འདིར།།
+ཆོས་སངས་རྒྱས་བསྟན་པ་རྒྱས་རྒྱས་ནས།།
+ནད་མུ་གེ་འཁྲུགས་རྩོད་དབྱིངས་སུ་ཡལ།།
+བདེ་སྐྱིད་ཀྱི་ཉི་མ་ཤར་བར་ཤོག །
+
+ཟེར་བའི་ཚིགས་བཅད་དེ་ཨིན། ཚིག་རྐང་འདི་དུམ་གྲ་མང་སོང་བ་ལས་ མི་རང་གར་གྱི་བསམ་འཆར། བརྙན་ཐུང་ཅིག་ན་ མཁན་རྟ་མགྲིན་སྲིད་ཐུབ་མཆོག་གིས། ས་སྐྱོང་དབང་ཕྱུག་ཆེན་པོ་འདི་ཚུ་ གནམ་མེད་ས་མེད་ཀྱི་རིག་རྩལ་ཆེཝ་ལས་ ཞིང་གཤེགས་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་ ཁོ་ར་ལས་གཙོས་པའི་ ཚོགས་ཆུང་ཅིག་བཟོ་ཐོག་ལས་ འཕྲི་སྣོན་སྲེ་གསུམ་གྱི་སྒོ་ལས་མཐའ་མེད་མཐའ་དཔྱོད་གྲུབ་འབྲས་འདི་ ཚིག་རྐང་དྲུག་ལུ་ ཁོ་ར་གིས་གཏན་ཕེབས་གནང་ནུག་ཟེར་གསུངས་ས་མཇལ་ཡི་ལགས། ད་རེས་མི་སེར་ཆེ་འབྲིང་ཆུང་གསུམ་ཀུན་གྱི་སྤྱན་ལམ་དུ་སྣང་སྲོལ་ཡོད་པའི་རྒྱལ་པོའི་བརྟན་བཞུགས་འདི་འབད་བ་ཅིན།
+
+འབྲུག་ཙན་དན་བཀོད་པའི་རྒྱལ་ཁབ་ནང་།།
+དཔལ་ལུགས་གཉིས་བསྟན་སྲིད་སྐྱོང་བའི་མགོན།།
+འབྲུག་རྒྱལ་པོ་མངའ་བདག་རིན་པོ་ཆེ།།
+སྐུ་འགྱུར་མེད་བརྟན་ཅིང་ཆབ་སྲིད་འཕེལ།།
+ཆོས་སངས་རྒྱས་བསྟན་པ་དར་ཤིང་རྒྱས།།
+འབངས་བདེ་སྐྱིད་ཉི་མ་ཤར་བར་ཤོག།
+
+ཟེར་མི་དེ་ཨིན། དེ་ལས་གདངས་བཟུམ་ཅི་འབད་བ་ཅིན་ ཐིམ་ཕུ་གཟིམ་དཔོན་ཇོའུ་ཅུ་མཆོག་གིས་ ཞིང་གཤེགས་པ་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་ལུ་སྙན་འབུལ་ཞུ་སྟེ། ཁྲི་མཉམ་པ་མེད་པ་པདྨའི་ཁྲི། །ཟེར་བའི་གཞུང་སྒྲའི་གདངས་དབྱངས་ལུ་གཞི་བཞག་སྟེ་ དེ་བསྒང་རྒྱལ་སྲིད་བསྟན་འཛིན་རབ་རྒྱས་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་བཞི་པའི་གསེར་ཁྲི་མངའ་སྲོལ་ཞུས་སྐབས་ཀྱི་གདངས་དབྱངས་ཅིག་འབདཝ་ལས་ དེ་གུ་འགབ་པ་ཅིན་ རྟེན་འབྲེལ་ཡང་ལེགས་པས། ཡུན་དུ་ཡང་དེ་གིས་བརྟན་ནི་ཨིན་སྦེ། རྒྱལ་སྲས་བསྟན་འཛིན་རབ་རྒྱས་ཟེར་བའི་སྐྱེས་བུ་འདི་ ཨུ་རྒྱན་མཧཱ་གུ་རུ་སྐུ་དངོས་ཨིནམ་ལས་ ཁོ་ལུ་འཕུལ་ཡོད་པའི་གདངས་ལུ་འགབ་པ་ཅིན་ག་དེ་སྦེ་འཚམ་ག་ཟེར་བའི་སྙན་འབུལ་ཞུ་བའི་ཚེ། དེ་གནམ་མེད་ས་མེད་ལེགས་ཤོམ་ཨིན་མས་ཟེར་བཀའ་གྲོལ་ཏེ་ གདངས་འདི་་སྙན་ཆའི་ཐོག་ཏུ་འབད་བ་ཅིན་ དྲག་ཤོས་ཨ་ཁུ་བཀྲོངས་མི་མཆོག་གིས་བཟོ་གནང་སྟེ་ རྒྱལ་ཁབ་ཀྱི་རྒྱལ་པོའི་བརྟན་བཞུགས་ཅི་སྦེ་ཆ་འཇོག་བསྒྲུབས་ནུག ། 
+ཅེས་པ་དེ་ཡང་གཞི་གཙོ་བོར་འབྲུག་པ་རྡོ་རྗེ་རྒྱལ་མཚན་མཆོག་གི་གསུང་བཤད་ལས་བཤུས་པ་ལགས་སོ།།
+
+བཀའ་དྲིན་ཆེ་ལགས།།
+
+
+
+
+|| [[འབྲུག་ཙན་དན་]]<br />
 |-
 | Calling code || +༩༧༥
 |}
