*Empty MediaWiki Message*

--- a/བྱའི་རིགས་ཅིག.mw
+++ b/བྱའི་རིགས་ཅིག.mw
@@ -1,18 +1,30 @@
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|+<big><big>'''''བྱའི་རིགས་ཅིག''<br />''Türkiye Cumhuriyeti'''''</big></big>
+|-
+| style="background:#efefef;" align="center" colspan=2 |
+{| border="0" cellpadding="2" cellspacing="0"
+|-
+| align="center" width="140px" | [[File:Flag of Turkey.svg|125px|]]
+| align="center" width="140px" | [[File:Emblem of Turkey.svg|105px]]
+|}
+|-
+| align=center colspan=2 | [[File:Turkey (orthographic projection).svg|250px]]
+|}
+
 [[File:Turkey (orthographic projection).svg|right|300px]]
 [[File:Flag of Turkey.svg|right|border|150px]]
 
 
-༡ བྱའི་རིགས་ཅིག ༢ བྱ་དེ་གི་ཤ།
+༡ '''བྱའི་རིགས་ཅིག''' ༢ བྱ་དེ་གི་ཤ།
 
 
+* Commons: [http://commons.wikimedia.org/wiki/Türkiye]
 
 
 {{Asia}}
 
 {{Europe}}
 
+[[Category:བྱའི་རིགས་ཅིག| ]]
+
 {{stub}}
-
-
-[[Category:རྒྱལ་ཁབ]]
- [[Category:ཨེ་ཤི་ཡ]]
