*Empty MediaWiki Message*

--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -1,9 +1,56 @@
-[[File:Shabdrung rubin.png|thumb|right|200px|ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ]]
+[[File:Shabdrung r
 
-[[ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།]] (1594-1651)
+༈ སྐྱབས་མགོན་ཆོས་ཀྱི་རྒྱལ་པོ་རྗེ་བླ་མ་ངག་དབང་རྣམ་རྒྱལ་མཆོག་གི་སྐུ་མཆོད།
 
+ལོ་བསྟར་རང་ཟླ་༣ པའི་ཚེས་བཅུའི་དུས་བཟང་འདི་ བཀའ་དྲིན་ཅན་གྱི་བདག་ཉིད་ སྐྱབས་མགོན་ངག་དབང་རྣམ་རྒྱལ་མཆོག་གི་སྐུ་མཆོད་ཀྱི་དུས་ཆེན་ལུ་ སྒོ་གསུམ་གུས་པ་ཆེན་པོའི་སྒོ་ལས་ སྨོན་ལམ་གྱི་མཚམས་སྦྱར་ནི་དང་འདྲེས་ཏེ་ སླབ་སྲོལ་ཡོད་དོ་བཟུམ་སྦེ།
 
+གཏམ་ཐག་ཐུང་ན་ཉན་གོ་བདེ། །
+ཡབ་ཐག་ཐུང་ན་བཞོན་གོ་བདེ། །
 
+ཟེར་བཅུད་བསྡུ་སྟེ་ཞུ་བ་ཅིན་ སྐྱབས་མགོན་ཆོས་ཀྱི་རྒྱལ་པོ་དཔལ་ངག་དབང་རྣམ་རྒྱལ་མཆོག་ ར་ལུང་འབྲུག་པའི་གདུང་རབས་འཛིན་མཁན་ ཡབ་དཔལ་ལྡན་འབྲུག་པའི་གདུང་བརྒྱུད་པ་རྗེ་བསྟན་པའི་ཉི་མ་དང་ ཡུམ་མཁའ་འགྲོའི་རིགས་བཟང་བསོད་ནམས་དཔལ་གྱི་བུ་ཁྲིད་གཉིས་ཀྱི་སྲས་སུ་ འབྲུག་བྱང་ཆུབ་གླིང་གི་གཞིས་ཀ་མགར་གྲོང་ལུ་ སྤྱི་ལོ་༡༥༩༤ རབ་བྱུང་༡༠པའི་ གནམ་ལོ་ཤིང་རྟ་ ཟླཝ་༡༡པའི་ཚེས་༡༡་ རེས་གཟའ་མིག་དམར་ སྐར་མ་ཐ་སྐར་འཛོམས་པའི་ གྲུབ་སྦྱོར་ཕུན་སུམ་ཚོགས་པའི་དུས་དང་བསྟུན་ ཆོས་ཉིད་རྣམ་དག་གི་གཟུགས་སྔགས་དང་བཅས་སྐུ་འཁྲུངས། རྒྱལ་སྲས་གཞོན་ནུ་མཆོག་ ཡབ་མེས་ཀྱི་མཚན་ལས་གྲས་ཏེ་མི་ཕམ་བསྟན་འཛིན་རྡོ་རྗེ་ཟེར་ མཚན་ཡང་དེ་སྦེ་གསོལ་གནང་ནུག །
+
+གདུང་རབས་དང་སྐུ་འཕྲེང་འཁྲུངས་རབས་ཕུན་སུམ་ཚོགས་པ་བཟུམ་གྱི་མཛད་རྣམ་མདོར་བསྡུས་ཙམ་ཞུ་ན། བདེ་ལྡན་སྣང་མཐའི་སྤྱན་སྔ་ལུ་ འཕགས་མཆོག་འཇིག་རྟེན་དབང་ཕྱུག ། ཤམྦྷ་ལའི་སེང་ཁྲི་གུ་ རིགས་ལྡན་པདྨ་དཀར་པོ། ལྷ་ལྡན་ཡུལ་དུ་ ཆོས་རྒྱལ་སྲོང་བཙན་སྒམ་པོ། ཟ་ཧོར་ཡུལ་དུ་མཁན་ཆེན་ཞི་བ་འཚོ། ཁ་ཆེའི་ཡུལ་ན་པཎ་ཆེན་ནཱ་རོ་ཏ་པ། གཉལ་སྨད་སྙི་བའི་རིགས་སུ་ཆོས་རྗེ་བདག་པོ་ལྷ་རྗེ། མྱང་སྟོད་རྒྱའི་གྲོང་ན་འགྲོ་མགོན་ཡེ་ཤེས་རྡོ་རྗེ། མངོན་དགའི་ཞིང་དུ་སྣང་བ་རྡུལ་བྲལ་སེམས་དཔའ། གངས་ཅན་ཕུལ་ལ་ཧ་རི་ལུ་རྒྱལ་དབང་ཀུན་དགའ་དཔལ་འབྱོར། བྱ་ཡུལ་གོང་མའི་སྲས་སུ་འཇམ་དབྱངས་ཆོས་ཀྱི་གྲགས་པ། ཤར་ཕྱོགས་ཀོང་པོའི་ཡུལ་དུ་ཀུན་མཁྱེན་པདྨ་དཀར་པོ་བཅས་པའི་སྐུ་ཕྲེང་ནོར་བུའི་དངོས་གྲུབ་གཡོ་མེད་རིམ་སྒྲིམ་བཟུམ་སྦེ་བྱོན་པའི་མཐའ་མ། ཆོས་སྲིད་ལུགས་གཉིས་ཀྱི་མངའ་བདག་ཆོས་ཀྱི་རྒྱལ་པོ་སྦེ་འབྱོན། ཀུན་མཁྱེན་འཁྲུངས་རབས་ལས།
+
+སྔོན་བྱོན་རྒྱལ་བ་ཀུན་གྱི་སྤྲུལ་པའི་གཞི།།
+མ་བྱོན་རྒྱལ་བ་རྣམས་ཀྱི་འབྱུང་ཁུངས་པ།།
+ད་ལྟའི་སྐྱོབ་པ་དག་དང་དབྱེར་མེད་པའི།།
+ཆོས་ཀྱི་རྒྱལ་པོའི་ཞབས་པད་བརྟན་གྱུར་ཅིག།
+
+ཅེས་གསུངས་པའི་ལུང་གིས་གསལ་ཏོག་ཏོ་བསྟན་ནུག ། དགུང་གྲངས་བཞི་ལྔ་ཙམ་ལས་ བྲི་ལྷག་མཁྱེན་པ་མ་ཚད་ ཐུགས་དམ་ལྗགས་བཟླས་ཚུ་ཡང་ རྒྱུན་ཆད་མེད་པ་མཛད། དགུང་གྲངས་བརྒྱད་ལུ་ མི་ཕམ་ཆོས་རྒྱལ་གྱི་སྤྱན་སྔ་ལས་ གཙུག་ཕུད་ཕུལ་ཏེ་ དགེ་བསྙེན་གྱི་སྡོམ་པ་བཞེས། ཀུན་མཁྱེན་འབྲུག་པའི་ལུང་གིས་བསྔགས་དོ་བཟུམ་སྦེ་ར་ ངག་གི་དབང་པོ་རྣམ་པར་རྒྱལ་བའི་སྡེ་ཟེར་བའི་ མཚན་གྱི་ཅོད་པན་བཅིངས་གནང་ནུག ། དེ་ལས་བཟུང་ཡབ་མེས་གཉིས་དང་ ཡོངས་འཛིན་ལྷ་དབང་བློ་གྲོས་ལ་སོགས་པའི་ཞབས་ལས། ཐུན་མོང་ཐུན་མིན་གྱི་གཞུང་རིག་གནས་དང་བཅས་པའི་བཤད་པ་དང་ སྨིན་གྲོལ་གདམས་པའི་བདུད་རྩི་ཚུ་བཞེས། ཁྱད་པར་ཤིན་ཏུ་ཐུན་མིན་གྱི་སྐོར། ལྟ་བ་ཕྱག་རྒྱ་ཆེན་པོ། སྒོམ་པ་བསྲེ་འཕོ་ཆོས་དྲུག སྤྱོད་པ་རོ་སྙོམས་སྐོར་དྲུག འབྲས་བུ་རྟེན་འབྲེལ་རབས་བདུན། ཀུན་ལ་གཅེས་པ་ལམ་བཟང་བླ་མ་སྒྲུབ་པའི་གདམས་པའི་གཞུང་ཤིང་ཆེན་པོ་ལྔ་ལ་སོགས་པ་ གསན་ལོ་ཙམ་མེན་པར་རབ་ཏུ་ཕྱིན་ཏེ་ སྔོན་གྱི་བག་ཆགས་ཐམས་ཅད་སད་ མཁྱེན་རབ་ཀྱི་པདྨོ་རྒྱས་ནུག །
+
+རྒྱལ་སྲས་གཞོན་ནུ་སྦེ་ཞལ་བཞུགས་པའི་སྐབས་ལས་རང་ སྐུ་གོང་མ་ཀུན་མཁྱེན་པད་མ་དཀར་པོའི་མཛད་ཚུལ་ཚུ་ གསལ་ཏོག་ཏོ་སྦེ་མཁྱེན་གསལ་ཆེ་རུང་། སྡེ་སྲིད་གཙང་པ་ཕུན་ཚོགས་རྣམ་རྒྱལ་གྱིས་ ཆ་བཞག་མ་བཏུབ་པར་ འབྲུགཔ་ནང་དོགས་རྩོད་གཞི་ལུ་འགྱུར་བཅུག ། ནང་ཕན་ཚུན་ཐུགས་བསུན་ཏེ་འབད་རུང་ རྗེ་མི་ཕམ་ཆོས་རྒྱལ་དང་ ཡབ་བསྟན་པའི་ཉི་མ་ གཞན་བླ་སློབ་དང་ ཆེ་མཐོའི་དཔོན་ཁག་ཚུ་འཛོམས་ཐོགས་ལས་ སྐྱབས་མགོན་ཆོས་ཀྱི་རྒྱལ་པོ་དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་མཆོག་ དགུང་ལོ་༡༣ བཞེས་པའི་ སྤྱི་ལོ་༡༦༠༦ གནམ་ལོ་མེ་རྟ་ལོར་ དཔལ་ལྡན་འབྲུག་པ་གོང་མ་རིམ་བྱོན་གྱི་གདན་ས་ འབྲུག་ར་ལུང་གི་མི་འཇིགས་གདོང་ལྔ་གིས་བཏེགས་པའི་ཁྲི་འཕངས་མཐོན་པོ་གུ་ གདན་འདྲེན་ཞུ་སྟེ་ རྗེ་མི་ཕམ་ཆོས་ཀྱི་རྒྱལ་པོ་མཆོག་གིས་ རྡོ་རྗེ་འཆང་གི་ཕྱག་མཚན་ཕྱག་ལུ་ཕུལ་ཏེ་ འབྲུག་པ་དཀར་བརྒྱུད་པའི་བསྟན་པའི་གཙོ་བོ་ལུ་ རྟེན་འབྲེལ་རྒྱས་ཤིང་རྒྱསཔ་རྩིས་ཐོགས་ལས་ཞབས་པད་བཀོད་ མངའ་གསོལ་མཛད་ནུག ། དེ་ལས་འབདན་ དཔལ་ལྡན་འབྲུག་པ་རིན་པོ་ཆེ་ངག་དབང་བསྟན་འཛིན་རྣམ་པར་རྒྱལ་བ་འཇིགས་མེད་གྲགས་པའི་སྡེ་ཟེར་བའི་ མཚན་གྱི་དར་དཔྱངས་ལྷུགས་པར་གསོལ་གནང་ནུག །
+
+སྐྱབས་མགོན་དམ་པ་དགུང་ལོ་༢༣ བཞེས་པའི་ སྤྱི་ལོ་༡༦༡༦ གནམ་ལོ་མེ་འབྲུག་ལོར་ ཁ་བཞི་ལྷོའི་རྒྱལ་ཁབ་ཙན་དན་ནགས་མོའི་ལྗོངས་སུ་ཆིབས་ཁ་བསྒྱུར། སྤྱིར་ལྟར་སྣང་དུ་ འབྲུག་པ་ནང་ཕན་ཚུན་གྱི་རྩོད་གཞི་དང་ གཙང་པའི་སྡེ་འཁྲུག་ཡོད་དོ་བཟུམ་སྦེ་སྣང་རུང་ དོན་ལུ་ཆོས་རྗེ་གཙང་པའི་ཞལ་ཆེམས་ལུང་བསྟན་དུས་ལུ་བབས། སྐྱབས་མགོན་ཆོས་ཀྱི་རྒྱལ་པོ་དཔལ་འབྲུག་རིན་པོ་ཆེའི་ཐུགས་བསྐྱེད་སྨོན་ལམ། དམ་ཅན་ཆོས་སྐྱོང་རྣམས་ཀྱིས་ཕྲིན་ལས་ཀྱི་སྟོངས་གྲོགས་མཛད་དེ་ དཔལ་ཡེ་ཤེས་མགོན་པོས་ཁ་བཞི་ལྷོའི་རྒྱལ་ཁབ་གདུལ་བྱའི་ཞིང་དུ་ཕུལ་བའི་ཉེར་ལེན། ལྷོ་མོན་ཁ་བཞིའི་མི་སེར་སྤྱི་མཐུན་ཁ་རྗེ་བསོད་ནམས།
+
+ལྷག་པར་དུ་ཨྱོན་ཐམས་ཅད་མཁྱེན་པའི་བཀའ་ལུང་སྟག་ཤམ་དགོངས་འདུས་ཁོག་དབུབ་ལས།
+ནམ་མཁའི་སྙིང་པོ་རང་འོད་འབྲུག་གི་མཚན༔
+ངག་གི་མིང་ཅན་ལྷོ་རོང་ཕྱོགས་སུ་འབྱུང་༔
+ཞེས་དང་།
+
+ངག་གི་མིང་ཅན་དྲག་སྔགས་གྲུབ་པ་འདིས༔
+མོན་ཁྲི་བཟུང་ནས་བོད་འབྲུག་གསོས་སུ་འགྱུར༔
+ཞེས་དང་།
+
+བདུད་འདུལ་གཏེར་ལུང་ལས།
+ནཱ་རོའི་སྤྲུལ་པ་ངག་གི་མིང་ཅན་འབྱུང་༔
+ཕྱག་རྒྱ་ཆེན་པོས་འགྲོ་རྣམས་སྨིན་པར་བྱེད༔
+
+ཟེར་ལུང་བསྟན་པའི་གཏེར་ལུང་ཚུ་ལས་ ལན་གཅིག་མེན་པར་ཡང་ནས་ཡང་དུ་བསྔགས་པའི་ལུང་བསྟན་དུས་སུ་བབས་པ་ལས། རྒྱལ་ཁབ་ནང་ལུ་ ལྷོ་ཁྲིམས་མེད་ས་ཁྲིམས་དང་ རྫ་ལུང་མེད་ས་ལུང་བཏགས་ཏེ་ དེ་ལས་རྫོང་གཞིས་ཁག་མང་རབས་ཅིག་བཞེངས་གནངམ་མ་ཚད་ ཕྱི་ནང་གསང་གསུམ་གྱི་དགྲ་ཡི་ཕྱོགས་ལས་རྣམ་པར་རྒྱལ་ཏེ་ དཔལ་ལྡན་འབྲུག་པའི་བསྟན་སྲིད་གཅིག་གིས་ ལྷོ་མོན་ཡོངས་རྫོགས་ལུ་དབང་བསྒྱུར་བའི་གཞུང་འདི་ལུ་ དཔལ་ལྡན་འབྲུག་པ་ཕྱོགས་ལས་རྣམ་རྒྱལ་ཟེར་བའི་ནད་དོན་དེ་ཡང་ དེ་ལས་བརྟེན་ཏེ་བྱུང་ནུག།
+
+ཨྱོན་ཆེན་པོས།
+བདུད་འཇོམས་རྡོ་རྗེ་ཞེས་བྱ་བ༔
+གསང་སྔགས་བསྟན་པའི་བདག་པོ་འབྱུང་༔
+ཞེས་དང་།
+
+མགོན་པོ་དངོས་གྲུབ་འབྱུང་བ་ལས།
+འཁོར་བའི་བདུད་རྣམས་འཇོམས་པ་པོ།།
+རྡོ་རྗེ་སློབ་དཔོན་བདག་ཉིད་ཆེ།།
+
+སྐྱབས་མགོན་ཆོས་ཀྱི་རྒྱལ་པོ་དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་མཆོག་གི་ཞབས་ལས་ རྒྱལ་སྲིད་ཀྱི་དབང་ཚད་འབྲུག་སྡེ་སྲིད་ཀྱི་དབུ་ཁྲིད་མཛད་ནི་དང་ ཆོས་ཀྱི་དབང་ལུང་ཡོངས་རྫོགས་ ཆོས་ཀྱི་དབུ་འཁྲིད་རྗེ་མཁནམ་གྱིས་མཛད་དགོ་པའི་བདག་རྐྱེན་གནང་སྟེ་འབད་རུང་ རྒྱལ་ཁབ་ཀྱི་དོན་ལུ་གལ་ཆེའི་གནད་དོན་ཚུ་ ལྷན་རྒྱས་དཔོན་ཁག་ཚུ་འཛོམས་ཏེ་གསུང་གྲོས་གནང་ཞིནམ་ལས་ གཞུང་སྡེ་སྲིད་ལུ་སྙན་འབུལ་ཞུ་སྟེ་ ཐག་བཅད་དགོཔ་མ་ཚད་ གཞུང་ལྷན་རྒྱས་དང་ཆེ་མཐོའི་གོ་གནས་ཀྱི་རིམ་པ་ཚུ་ མ་བཏུབ་བཏུབ་སྦེ་བཟོ་གནང་སྟེ་ རྒྱལ་ཁབ་འདི་ ལྷ་ཡུལ་ས་ཁར་བབ་བབ་བཟུམ་སྦེ་བཟོ་གནང་ནུག །
+
+སྐྱབས་མགོན་ཆོས་ཀྱི་རྒྱལ་པོ་དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་མཆོག་ སྐུ་དངོས་ཀྱི་གདུལ་བྱའི་འགྲོ་དོན་མཛད་བྱ་མཇུག་བཟུམ་ཅི་ སྐུ་མཐའ་མའི་མཛད་པ་ཨིན། དེ་ཡང་ཨུ་རྒྱན་མཧཱ་གུ་རུ་སློབ་དཔོན་ཆེན་པོ་པདྨ་འབྱུང་གནས་མཆོག་གིས་ སྐྱབས་མགོན་ངག་དབང་རྣམ་རྒྱལ་མཆོག་ རིམ་གཉིས་རྣལ་འབྱོར་ལུ་བཞུགས་པ་ཅིན་ དམག་མཐའ་མཇུག་ལས་བཟློག་སྟེ་ སངས་རྒྱས་ཀྱི་བསྟན་པ་གོང་དུ་འཕེལ་འོང་ཟེར་བའི་ལུང་གིས་བསྐུལ། དཔལ་མགོན་ལྕམ་དྲལ་ཆོས་སྲུང་དྲེགས་པ་སྡེ་བརྒྱད་ཀྱི་ཚོགས་དང་བཅས་པའི་ཕྱོགས་ལས་ཡང་ དེ་བཟུམ་གྱི་གསོལ་བ་བཏབ་པ་ལས་བརྟེན་ ཐུགས་དམ་ལུ་བཞུགས་དགོཔ་ངེས་བརྟན་ཨིནམ་དགོངས་ཏེ། དགུང་ལོ་༥༨ བཞེས་པའི་ སྤྱི་ལོ་༡༦༥༡ དང་རབ་བྱུང་༡༡ པའི་ལྕགས་ཡོས་ ཧོར་ཟླ་གསུམ་པའི་ཡར་ངོ་ཚེས་བཅུའི་དུས་ཆེན་ལུ། བདག་ཅག་གི་སྐྱབས་མགོན་ངག་དབང་རྣམ་རྒྱལ་མཆོག་ ཐུགས་དམ་ལུ་བཞུགས་ནམ་དུས་ཞལ་སྔ་ནས། ད་རེས་ཁམས་ཅིག་ཕྱི་ནང་གི་བཀའ་བློན་ལས་འཛིན་རྣམས་དང༌། གྲྭ་ཚང་གི་གནས་བརྟན་དབུ་མཛད་ཆོས་ཁྲིམས་སོགས་ རྒན་གཞོན་སྐུ་བགྲེས་ཚུ་དང༌། གྲྭ་པ་དམངས་མང་སོགས་ སྤྱི་སྒེར་ཐམས་ཅད་ལུ་ ངེའི་ངོ་ལས་ལོ་རྒྱུས་ཅིག་གྲོས་བསྟུན་འབད་དགོཔ་ཨིན་རུང་ ཁམས་མ་དྭངས་བ་ལས་ དབུ་མཛད་ཁྱོད་ཀྱིས་གཞན་རྣམས་ལུ་ དེ་ལུགས་བཀོད་རྒྱ་ ཀུན་ལུ་ཁྱབ་དགོ་ཟེར་ བསྟན་པའི་བྱ་བ་ཕྲ་རགས་ཐམས་ཅད་ལུ་ བསླབ་སྟོན་ཞིབ་དཔྱད་ཀྱི་བཅད་དོན་རྒྱས་དགོཔ་དང༌། འདས་མ་འོངས་ཀྱི་ལོ་རྒྱུས་མཐའ་རྒྱས་དང་བཅས་པའི་ ཞལ་ཆེམས་ལུང་བསྟན་ཞིབ་ཞིབ་བསྩལ་སྟེ་ སྐུ་མཚམས་འོད་གསལ་ཆེན་པོའི་ཏིང་ངེ་འཛིན་གྱི་རྣལ་འབྱོར་ལུ་རིམ་གྱིས་བཞུགས་ནུག །
+
+དེ་ལས་ཚུར་ལོ་ངོ་མང་རབས་ཅིག་ སྐྱབས་མགོན་རིན་པོ་ཆེ་སྐུ་མཚམས་བཞུགས་པའི་ཚུལ་སྦེ་ དགོངས་རྫོགས་མ་སྒྲུབ་རུང་ རྒྱལ་སྲས་ཀུན་དགའ་རྒྱལ་མཚན་གྱིས་ སྐུ་གསུང་ཐུགས་ཀྱི་སྤྲུལ་པ་འབྱོན་དགོ་པའི་གསོལཝ་བཏབ་ད་ ཐུགས་དམ་གྲོས་ཞིནམ་ལས་ཚུར་ ལོ་བསྟར་ཟླཝ་༣ པའི་ཚེས་༡༠ ལུ་ སྐྱབས་མགོན་རིན་པོ་ཆེ་དཔལ་ངག་དབང་རྣམ་རྒྱལ་མཆོག་གི་སྐུ་མཆོད་བཟུང་ནི་འགོ་བཙུགས་ནུག ། ཧེ་མའི་སྐབས་ཅིག་ལུ་ སྐུ་མཆོད་ཉིནམ་གསུམ་ར་ཨིན་རུང་། མཁན་རབས་༦༩ པ་སྐྱབས་རྗེ་དགེ་འདུན་རིན་ཆེན་མཆོག་གི་སྐུ་ཐོག་ལུ་ ཉིན་གྲངས་ཡར་སེང་གནང་སྟེ་ ད་རེས་སྐུ་མཆོད་ཟླཝ་༣ པའི་ཚེས་༡༥ ཚུན་ སྔར་ལས་རྒྱས་རྒྱས་སྦེ་བཟུང་སྲོལ་ཡོད། ལགས་སོ།།
 
 == འབྲེལ་གཏུགས ==
 
