--- a/འབྲུག་ཡུལ་.mw
+++ b/འབྲུག་ཡུལ་.mw
@@ -8,7 +8,7 @@
 | align="center" width="140px" | [[File:Flag of Bhutan.svg|125px|Flag of Bhutan]]
 | align="center" width="140px" | [[File:Emblem of Bhutan.svg|111px|Emblem of Bhutan]]
 |-
-| align="center" width="140px"|([[ཧྥ་རན་སིའི་དར་ཆ།]])
+| align="center" width="140px"
 | align="center" width="140px"|([[རྒྱལ་ཡོངས་ལས་རྟགས།]])
 |}
 |-
