*Empty MediaWiki Message*

--- a/ཧྥ་རན་ས་ཀྱི་དར་ཆ།.mw
+++ b/ཧྥ་རན་ས་ཀྱི་དར་ཆ།.mw
@@ -11,6 +11,30 @@
 
 
 * [[འབྲུག་ཡུལ་]]
+རྒྱལ་དར།
+ང་བཅས་འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྒྱལ་དར་འདི་ ཧེ་མ་ཡོད་པའི་ལོ་རྒྱུས་མིན་འདུག ། འདི་ང་བཅས་དུས་རབས་ཉི་ཤུ་པའི་ནང་གི་བསྒྱུར་བ་ཅིག་ཨིན། དུས་རབས་ཉི་ཤུ་པའི་ནང་ ཡར་སྟོད་ལས་རྒྱ་ནག་གི་རྒྱལ་ཁབ་ འདི་ཡང་འགྱུར་བ་ཆགས། སྨད་ལས་རྒྱ་གར་གི་རྒྱལ་ཁབ་ འདི་ཡང་འགྱུར་བ་ཆགས། རྒྱལ་ཁབ་རང་རང་སོ་སོའི་རྒྱལ་ལུགས་ རྒྱལ་དར་ རྒྱལ་རྟགས་ཚུ་ བཟོ་ཞིནམ་ལས་ ཁོང་སྟོབས་ཅན་གཉིས་ཀྱི་སྦུག་ལུ་ ང་བཅས་ནཱ་ཡང་ ཅོག་ཅིགཔ་སྦེ་བསྒྱུར་བ་བཏང་དགོཔ་བྱུང་ནུག །
+
+དེ་ཡང་ས་སྐྱོང་དབང་ཕྱུག་ཆེན་པོ་ཞིང་གཤེགས་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་གི་བཀའ་ལྟར་དུ་ དང་པ་རང་ནང་པའི་རིག་པའི་གནས་ལྔ་ལུ་མཁས་ཤོས་ ད་ལི་ན་སློབ་དཔོན་རྣམ་རྒྱལ་མཆོག་དང་ དྲག་ཤོས་ཤིང་ཁ་བླམ་ དྲག་ཤོས་ཨ་ཁུ་བཀྲོང་མི་ ཁོང་ཕུལ་དུ་ཕྱིན་པའི་མཁས་པ་ལེ་ཤ་ཅིག་ ཕྲི་སྣོན་སྲེ་གསུམ་གྱི་སྒོ་ལས་ རྒྱལ་ལུགས་འདི་བརྩམས་གནང་ནུག ། མཐའ་མེད་མཐའ་དཔྱོད་གྲུབ་འབྲས་འདི་ ཚིགས་རྐང་དྲུག་ལུ་ ཞིང་གཤེགས་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་ ཁོ་ར་གིས་གཏན་ཕེབས་གནང་ནུག ། ཚིགས་བཅད་འདི་འབད་བ་ཅིན་་་
+
+འབྲུག་ཙན་དན་བཀོད་པའི་རྒྱལ་ཁབ་ནང་།།
+
+དཔལ་ལུགས་གཉིས་བསྟན་སྲིད་སྐྱོང་བའི་མགོན།།
+
+འབྲུག་རྒྱལ་པོ་མངའ་བདག་རིན་པོ་ཆེ།།
+
+སྐུ་འགྱུར་མེད་བརྟན་ཅིང་ཆབ་སྲིད་འཕེལ།།
+
+ཆོས་སངས་རྒྱས་བསྟན་པ་དར་ཞིང་རྒྱས།།
+
+འབངས་བདེ་སྐྱིད་ཉི་མ་ཤར་བར་ཤོག།
+
+རྒྱལ་ལུགས་གཏན་ཕེབས་གནང་ཚརཝ་ཅིན་ རྒྱལ་ལུགས་འདི་གིས་མཚོན་པའི་ རྒྱལ་དར་ཡང་བཟོ་དགོཔ་ལས་ རྒྱལ་དར་འདི་རྒྱལ་ཡུམ་སྐལ་བཟང་མཆོག་གི་སྐུ་མཆེད་ ཨ་ནུ་ལྷ་རྒྱལ་གྱིས་བཟོ་གནང་གནངམ་ཨིན་ཟེར་སླབ་སྲོལ་འདུག ། འདི་ཡང་ག་དེ་འབད་བཟོ་ནུག་དགོ་ཟེར་བ་ཅིན་ ཚོན་མདོག་སེར་པོ་ ཚོན་མདོག་དམར་པོ་ སྦུག་ན་འབྲུག་དཀར་པོ་གཅིག ། མཚོན་སྲོལ་འབད་བ་ཅིན་ སེར་པོ་འདི་གིས་འབྲུག་རྒྱལ་པོ་མཚོན། དམར་པོ་འདི་ བླམ་ཆོསཔ་ཚུ་མཚོན། འབྲུག་འདི་མི་སེར་ཚུ་མཚོན་སྦེ་ དཔེར་ན་འབྲུག་རྒྱལ་པོ་མངའ་བདག་རིན་པོ་ཆེ། །སྐུ་འགྱུར་མེད་བརྟན་ཅིང་ཆབ་སྲིད་འཕེལ། །ཟེར་མི་འདི་ སེར་པོ་འདི་གིས་མཚོན་ ཆོས་སངས་རྒྱས་བསྟན་པ་དར་ཞིང་རྒྱས།། ཟེར་མི་འདི་ ཚོན་མདོག་དམར་པོ་འདི་གིས་མཚོན་ འབངས་བདེ་སྐྱིད་ཉི་མ་ཤར་བར་ཤོག། ཟེར་མི་འདི་ འབྲུག་དཀར་པོ་འདི་གིས་མཚོན། འབྲུག་འདི་སྐད་གྲགས་ཆེ་དྲགས། འབྲུག་དཀར་པོ་འདི་ ནད་དང་མུ་གེ་ཞི་བ། འབྲུག་གི་ལག་པ་ནོརབུ་འཆང་མི་འདི་ འབྲུག་རྒྱལ་ཁབ་འདི་འབྱོར་ལྡན་ཕྱུགཔོ་འཆང་ནི་ནོར་བུ་ཨིན།
+
+ཧེ་མ་འབད་བ་ཅིན་ རྒྱལ་དར་འདི་གྲུ་བཞི་སྦེ་བཟོ་བཟོཝ་མས་ དེ་ལས་རྒྱལ་ཁབ་གཞན་མི་ཆ་ཁྱབ་ག་ར་ རིངམོ་སྦེ་ཡོདཔ་ད་ལུ་ འདི་གུ་དཔེ་བླངས་ཏེ་རིངམོ་སྦེ་བཟོ་གནང་ནུག ། དེ་ལས་ཚོན་མདོག་དམརཔོ་འདི་ཡང་ ལི་ཝང་ལུ་བཟོ་གནང་ཞིན་ན་ སེརཔོ་འདི་འབྲུག་རྒྱལ་པོ་དང་ ལི་ཝང་འདི་བློན་པོ་ལུ་མཚོན། ཆོས་ཕྱོགས་ལས་ སེརཔོ་འདི་རྗེ་མཁན་པོ་དང་ ལི་ཝང་འདི་བླ་སློབ་ལུ་མཚོན། དེ་ལས་འབྲུག་དཀརཔོ་འདི་ མི་སེར་བུ་དང་བུ་མོ་ཚུ་ལུ་མཚོནམ་ཨིནམ་སྦེ།
+
+ས་སྐྱོང་དབང་ཕྱུག་ཆེན་པོ་ཞིང་གཤེགས་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་གི་སྐབས་ལུ་ དམག་སྡེ་དང་ སློབ་གྲྭ་གསརཔ་ལེ་ཤ་ཅིག་བཙུགས་ཞིནམ་ལས་ ཡར་རྒྱ་ནག་ལུ་འབད་རུང་ མར་རྒྱ་གར་ལུ་འབད་རུང་ དམག་གྱལ་ཐིག་རེ་བསྒྲིགས་པ་ཅིན་ དང་པ་རྒྱལ་ལུགས་འདི་བཏང་ རྒྱལ་དར་འདི་འཕྱར་ མི་ཚུ་གིས་གུས་ཞབས་འབད། དེ་བཟུམ་འབད་རང་ང་བཅས་འབྲུག་རྒྱལ་ཁབ་ནང་ལུ་ཡང་ རྒྱལ་ཁབ་ཀྱི་མཛད་རིམ་ ག་ཅི་འབད་རུང་ རྒྱལ་ལུགས་འདི་བཏང་ རྒྱལ་དར་འདི་འཕྱརཝ་ད་ རྒྱལ་ཁབ་ཀྱི་འགོ་ཁྲིདཔ་ རྒྱལ་ཁབ་ རྒྱལ་ཁབ་ཀྱི་ལམ་སྲོལ་ འདི་ཚུ་ག་ར་ལུ་ཤ་ཞེན་བསྐྱེད་དགོཔ་ཁག་ཆེ་བས།
+
+དུས་ནམ་ར་འབད་རུང་ རྒྱལ་དར་རལ་རལཝ་འཕྱར་ནི་དང་ ད་རུང་མར་ལས་ཤིང་འབྲས་བསྡམ་ནི་བཟུམ་སྦེ་བཟོ་བ་ཅིན་ མི་འདི་བསོད་ནམས་ར་ཟད་ཚརཝ་ཨིན། རྩ་ཁྲིམས་ནང་ལུ་ཡང་ རྒྱལ་དར་འདི་ས་གཙང་བཞག་དགོ་ རལ་རལཝ་མི་བཏུབ་ གུས་ཞབས་འབད་དགོ་ཟེར་གསུང་ཡོད་དོ་བཟུམ་སྦེ་མཛད་པ་ཅིན་ བུ་དང་བུ་མོ་རེ་རེ་ཞིན་དུ་བསོད་ནམས་ཡར་རྒྱས་འགྱོ་འོང་། རྒྱལ་དར་འདི་ལུ་ འ་ནཱིམ་ཅིག་གནོདཔ་ཅན་དང་ མེདཔ་བཏང་པ་ཅིན་ བསོད་ནམས་ཡང་དམའ་བཀྲག་འགྱོ་འོང་། དེ་འབདཝ་ལས་ རྒྱལ་དར་འདི་འཕྱར་བའི་སྐབས་ ང་གིས་ངེ་གི་རྒྱལ་ཁབ་ཀྱི་འགོ་ཁྲིདཔ་འདི་ལུ་ གུས་བཀུར་འབད་དགོ ། ངེ་གི་ཆོས་འདི་ལུ་གུས་བཀུར་འབད་དགོ ། ངེ་གི་ཆ་རོགས་འབྲུག་དཀརཔོ་འདི་ལུ་གུས་བཀུར་འབད་དགོ་ཟེར་བསམ་དགོཔ་ཨིན། དེ་སྦེ་འབད་ཡར་སོང་པ་ཅིན་ འབྲུག་རྒྱལ་པོ་ བློན་པོ་ བླ་ཆོསཔ་ མི་སེར་ག་ར་ སེམས་ལུ་འབབ་འོང་ཟེར་ཞུ་ཨིན།
 
 == འབྲེལ་མཐུད། ==
 * http://www.bhutan.gov.bt/government/abt_nationalflag.php
