*Empty MediaWiki Message*

--- a/ཧྥ་རན་ས་ཀྱི་དར་ཆ།.mw
+++ b/ཧྥ་རན་ས་ཀྱི་དར་ཆ།.mw
@@ -1,17 +1,10 @@
-[[File:Flag of Bhutan.svg|500px|thumb|right|རྒྱལ་དར།]]
+[[File:Flag of Bhutan.svg|500px|thumb|right|[[རྒྱལ་དར།]]]]
 
-འབྲུག་གི་རྒྱལ་དར་འདི་ [[དབྱིབས་གྲུ་བཞི་སྦེ་ཡོདཔ་དང་]] ཕྱོགས་གཉིས་ལུ་ གསེག་དྲ་སྦེ་བགོ་ཡོདཔ་ཨིན། ཕྱེ་གསེརཔོ་སྦེ་ལྟག་ལུ་ཡོད་མི་དེ་གིས་ [[སྲིད་དང་མངའ་བདག་རྒྱལ་པོའི་]] བརྡ་མཚོན་ཚུ་སྟནམ་ཨིནམ་དང་ འོག་ལུ་ཡོད་མི་ ལི་ཝང་འདི་གིས་ འབྲུག་པ་བཀའ་རྒྱུད་ཆོས་ལུགས་ཀྱི་བརྡ་མཚོན་ཚུ་གསལ་སྟོན་འབདཝ་ཨིན། [[འབྲུག་དཀརཔོ་སྦེ་ཡོད་མི་དེ་གིས་]] རྒྱལ་ཁབ་ཀྱི་མིང་དང་ རྒྱལ་ཁབ་ཀྱི་རང་བཞིན་གཙང་མ་ཡོད་པའི་བརྡ མཚོན་སྟོནམ་ཨིནམ་དང་ འབྲུག་གི་ལག་པར་ནོར་བུ་ཡོད་མི་དེ་ [[རྒྱལ་ཁབ་ནང་ལུ་རྒྱུ་ནོ་ལོངས་སྤྱོད་ཕུན་གསུམ་ཚོགས་པའི་རྟགས་ཨིན]]། འབྲུག་གི་རྒྱལ་དར་འདི་ ༡༩༤༧ ལུ་ མ་ཡུམ་ ཆོས་ཉིད་དབང་མོ་མཆོག་གིས་གསར་བསྐྲུན་འབད་འབདཝ་ཨིནམ་དང་ ༡༩༥༦ ལུ་ ད་ལྟོའི་བཟོ་རྣམ་ལུ་ ལེགས་བཅོས་འབད་འབདཝ་ཨིན།
-
-
+[[འབྲུག་གི་རྒྱལ་དར་]]འདི་ [[དབྱིབས་གྲུ་བཞི་སྦེ་ཡོདཔ་དང་]] ཕྱོགས་གཉིས་ལུ་ གསེག་དྲ་སྦེ་བགོ་ཡོདཔ་ཨིན། ཕྱེ་གསེརཔོ་སྦེ་ལྟག་ལུ་ཡོད་མི་དེ་གིས་ [[སྲིད་དང་མངའ་བདག་རྒྱལ་པོའི་]] བརྡ་མཚོན་ཚུ་སྟནམ་ཨིནམ་དང་ འོག་ལུ་ཡོད་མི་ ལི་ཝང་འདི་གིས་ འབྲུག་པ་བཀའ་རྒྱུད་ཆོས་ལུགས་ཀྱི་བརྡ་མཚོན་ཚུ་གསལ་སྟོན་འབདཝ་ཨིན། [[འབྲུག་དཀརཔོ་སྦེ་ཡོད་མི་དེ་གིས་]] རྒྱལ་ཁབ་ཀྱི་མིང་དང་ རྒྱལ་ཁབ་ཀྱི་རང་བཞིན་གཙང་མ་ཡོད་པའི་བརྡ མཚོན་སྟོནམ་ཨིནམ་དང་ འབྲུག་གི་ལག་པར་ནོར་བུ་ཡོད་མི་དེ་ [[རྒྱལ་ཁབ་ནང་ལུ་རྒྱུ་ནོ་ལོངས་སྤྱོད་ཕུན་གསུམ་ཚོགས་པའི་རྟགས་ཨིན]]། འབྲུག་གི་རྒྱལ་དར་འདི་ ༡༩༤༧ ལུ་ མ་ཡུམ་ ཆོས་ཉིད་དབང་མོ་མཆོག་གིས་གསར་བསྐྲུན་འབད་འབདཝ་ཨིནམ་དང་ ༡༩༥༦ ལུ་ ད་ལྟོའི་བཟོ་རྣམ་ལུ་ ལེགས་བཅོས་འབད་འབདཝ་ཨིན།
 
 
+[[རྒྱལ་དར།]]
 
-
-
-
-
-* [[འབྲུག་ཡུལ་]]
-རྒྱལ་དར།
 ང་བཅས་འབྲུག་རྒྱལ་ཁབ་ཀྱི་རྒྱལ་དར་འདི་ ཧེ་མ་ཡོད་པའི་ལོ་རྒྱུས་མིན་འདུག ། འདི་ང་བཅས་དུས་རབས་ཉི་ཤུ་པའི་ནང་གི་བསྒྱུར་བ་ཅིག་ཨིན། དུས་རབས་ཉི་ཤུ་པའི་ནང་ ཡར་སྟོད་ལས་རྒྱ་ནག་གི་རྒྱལ་ཁབ་ འདི་ཡང་འགྱུར་བ་ཆགས། སྨད་ལས་རྒྱ་གར་གི་རྒྱལ་ཁབ་ འདི་ཡང་འགྱུར་བ་ཆགས། རྒྱལ་ཁབ་རང་རང་སོ་སོའི་རྒྱལ་ལུགས་ རྒྱལ་དར་ རྒྱལ་རྟགས་ཚུ་ བཟོ་ཞིནམ་ལས་ ཁོང་སྟོབས་ཅན་གཉིས་ཀྱི་སྦུག་ལུ་ ང་བཅས་ནཱ་ཡང་ ཅོག་ཅིགཔ་སྦེ་བསྒྱུར་བ་བཏང་དགོཔ་བྱུང་ནུག །
 
 དེ་ཡང་ས་སྐྱོང་དབང་ཕྱུག་ཆེན་པོ་ཞིང་གཤེགས་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་གི་བཀའ་ལྟར་དུ་ དང་པ་རང་ནང་པའི་རིག་པའི་གནས་ལྔ་ལུ་མཁས་ཤོས་ ད་ལི་ན་སློབ་དཔོན་རྣམ་རྒྱལ་མཆོག་དང་ དྲག་ཤོས་ཤིང་ཁ་བླམ་ དྲག་ཤོས་ཨ་ཁུ་བཀྲོང་མི་ ཁོང་ཕུལ་དུ་ཕྱིན་པའི་མཁས་པ་ལེ་ཤ་ཅིག་ ཕྲི་སྣོན་སྲེ་གསུམ་གྱི་སྒོ་ལས་ རྒྱལ་ལུགས་འདི་བརྩམས་གནང་ནུག ། མཐའ་མེད་མཐའ་དཔྱོད་གྲུབ་འབྲས་འདི་ ཚིགས་རྐང་དྲུག་ལུ་ ཞིང་གཤེགས་དམ་པ་འབྲུག་རྒྱལ་གསུམ་པ་མཆོག་ ཁོ་ར་གིས་གཏན་ཕེབས་གནང་ནུག ། ཚིགས་བཅད་འདི་འབད་བ་ཅིན་་་
