*Empty MediaWiki Message*

--- a/ཧྥ་རན་ས་ཀྱི་དར་ཆ།.mw
+++ b/ཧྥ་རན་ས་ཀྱི་དར་ཆ།.mw
@@ -1,6 +1,6 @@
 [[File:Flag of Bhutan.svg|500px|thumb|right|[[རྒྱལ་དར།]]]]
 
-[[འབྲུག་གི་རྒྱལ་དར་]]'''འདི་'''
+[[འབྲུག་གི་རྒྱལ་དར་]]'''འདི་ དབྱིབས་གྲུ་བཞི་སྦེ་ཡོདཔ་དང་ ཕྱོགས་གཉིས་ལུ་ གསེག་དྲ་སྦེ་བགོ་ཡོདཔ་ཨིན། ཕྱེ་གསེརཔོ་སྦེ་ལྟག་ལུ་ཡོད་མི་དེ་གིས་ སྲིད་དང་མངའ་བདག་རྒྱལ་པོའི་ བརྡ་མཚོན་ཚུ་སྟནམ་ཨིནམ་དང་ འོག་ལུ་ཡོད་མི་ ལི་ཝང་འདི་གིས་ འབྲུག་པ་བཀའ་རྒྱུད་ཆོས་ལུགས་ཀྱི་བརྡ་མཚོན་ཚུ་གསལ་སྟོན་འབདཝ་ཨིན། འབྲུག་དཀརཔོ་སྦེ་ཡོད་མི་དེ་གིས་ རྒྱལ་ཁབ་ཀྱི་མིང་དང་ རྒྱལ་ཁབ་ཀྱི་རང་བཞིན་གཙང་མ་ཡོད་པའི་བརྡ མཚོན་སྟོནམ་ཨིནམ་དང་ འབྲུག་གི་ལག་པར་ནོར་བུ་ཡོད་མི་དེ་ རྒྱལ་ཁབ་ནང་ལུ་རྒྱུ་ནོ་ལོངས་སྤྱོད་ཕུན་གསུམ་ཚོགས་པའི་རྟགས་ཨིན། འབྲུག་གི་རྒྱལ་དར་འདི་ ༡༩༤༧ ལུ་ མ་ཡུམ་ ཆོས་ཉིད་དབང་མོ་མཆོག་གིས་གསར་བསྐྲུན་འབད་འབདཝ་ཨིནམ་དང་ ༡༩༥༦ ལུ་ ད་ལྟོའི་བཟོ་རྣམ་ལུ་ ལེགས་བཅོས་འབད་འབདཝ་ཨིན།'''
  
 
 
