--- a/ཧོང་ཀོང.mw
+++ b/ཧོང་ཀོང.mw
@@ -25,3 +25,19 @@
 |}
 
 '''ཧོང་ཀོང'''– ཀྲུང་ཧྭ་མི་དམངས་སྤྱི་མཐུན་རྒྱལ་ཁབ 香港 Kong Kong
+
+
+
+
+
+
+
+
+
+
+{{Asia}}
+
+{{stub}}
+
+[[Category:རྒྱལ་ཁབ]]
+[[Category:ཨེ་ཤི་ཡ]]
