--- a/མ་ཀའོ.mw
+++ b/མ་ཀའོ.mw
@@ -25,3 +25,17 @@
 |}
 
 '''མ་ཀའོ''' – ཀྲུང་ཧྭ་མི་དམངས་སྤྱི་མཐུན་རྒྱལ་ཁབ 澳門 Macau
+
+
+
+
+
+
+
+
+{{Asia}}
+
+{{stub}}
+
+[[Category:རྒྱལ་ཁབ]]
+[[Category:ཨེ་ཤི་ཡ]]
